--- a/java Study/객체지향/상속.md
+++ b/java Study/객체지향/상속.md
@@ -18,3 +18,18 @@ Parent => 조상클래스(부모클래스), Child =>자손클래스(자식클래
 코드 재사용성 높임 </br>
 코드 중복제거(유지보수 용이) </br>
 : 이러한 방식이 객체를 지향하는 방법이다</br></br>
+<h3>📌 하지만 예외는 있다(Broken API, Stack)</h3>
+<img src="https://github.com/syoh98/TIL/assets/76934280/6f086abd-1659-44ab-aa5d-0b4f8d06f590" width="500"/> </br>
+Stack: LIFO(Last In First Out)의 특징을 갖는 자료구조
+
+```java
+public class Stack<E> extends Vextor<E> {
+    public Stack() {}
+    public E push(E item) { add Element return item; }
+    public synchronized E pop() {}
+    public synchronized E peek() {}
+    public synchronized int search(Object o) {}
+    // ...
+}
+```
+Stack은 Vector를 상속받았기 때문에, LIFO를 보장하지 못한다.(중간에서 삽입, 삭제가 가능하다) </br>
