--- a/java Study/객체지향/상속.md
+++ b/java Study/객체지향/상속.md
@@ -23,7 +23,7 @@ Parent => 조상클래스(부모클래스), Child =>자손클래스(자식클래
 Stack: LIFO(Last In First Out)의 특징을 갖는 자료구조
 
 ```java
-public class Stack<E> extends Vextor<E> {
+public class Stack<E> extends Vector<E> {
     public Stack() {}
     public E push(E item) { add Element return item; }
     public synchronized E pop() {}
