--- a/java Study/객체지향/상속.md
+++ b/java Study/객체지향/상속.md
@@ -32,4 +32,8 @@ public class Stack<E> extends Vector<E> {
     // ...
 }
 ```
-Stack은 Vector를 상속받았기 때문에, LIFO를 보장하지 못한다.(중간에서 삽입, 삭제가 가능하다) </br>
+Stack은 Vector를 상속받았기 때문에, LIFO를 보장하지 못한다.(중간에서 삽입, 삭제가 가능하다) </br></br>
+
+<b>상속은 코드의 재사용의 목적이 아니다. 정말 재사용의 목적이라면 private, protected의 접근제어자가 필요할까?</b></br> 
+<b>상속은 코드 재사용의 목적이 아니고 타입의 공유가 목적이다.</b></br>
+-> 이러한 이유로 상속보다 컴포지션 사용을 권장한다.
