--- a/java Study/스트림.md
+++ b/java Study/스트림.md
@@ -17,7 +17,8 @@
   * 스트림은 일회용
     Iterator와 동일하게 한번 사용하면 닫혀서 다시 사용불가. 필요시 스트림 재생성 해야함
   * 스트림은 작업을 내부 반복으로 처리
-    * 내부반복이란?   
+    * 💡 내부반복이란? 스트림이 반복을 알아서 처리하고 결과 스트림 값을 어딘가에 저장해 주는 것   
+    * 💡 외부 반복은 사용자가 직접 요소를 반복하는 것   
   * 스트림의 연산   
     1️⃣ 스트림 생성: 데이터 소스로부터 스트림을 생성   
     2️⃣ 중간연산: 연산결과가 스트림인 연산. 스트림에 연속해서 중간연산 가능   
@@ -36,7 +37,8 @@
 
 ## 1️⃣ 스트림 생성
 * 컬렉션
-  ``` Stream<T> Collection.stream() ``` -> Collection의 자식인 List와 Set을 구현한 컬렉션 클래스들 모두 stream()메서드로 스트림 생성가능
+  ``` Stream<T> Collection.stream() ```   
+  -> Collection의 자식인 List와 Set을 구현한 컬렉션 클래스들 모두 stream()메서드로 스트림 생성가능
 * 배열   
   배열을 소스로 하는 스트림을 생성하는 메서드는 Stream과 Arrays에 static 메서드로 정의되어 있음   
 * 특정 범위 정수
@@ -71,8 +73,20 @@
 * 변환
   * map(): 스트림의 요소에 저장된 값 중에서 원하는 필드만 뽑아내거나 특정 형태로 변환해야 할 때 사용
 * 조회
-  * peek(): 연산과 연산 사이에 올바르게 처리되었는지 확인하고 싶을 경우 사용
-
+  * peek(): 연산과 연산 사이에 올바르게 처리되었는지 확인하고 싶을 경우 사용   
+* 📑 **mapToInt(), mapToLong(), mapToDouble()**   
+  * map()은 연산의 결과로 Stream<T>타입의 스트림을 반환   
+    -> 스트림의 요소를 숫자로 변환하는 경우 **기본형 스트림**으로 변환하는 것이 유용하기 때문에 사용
+  * 기본형 스트림은 숫자를 다루는데 편리한 메서드들을 제공
+    * ``` int sum() ```
+    * ``` OptionalDouble average() ```
+    * ``` OptionalInt max() ```
+    * ``` OptinalInt min() ```
+  * 💡 기본형 스트림(IntStream, LongStream..)을 Stream<T>로 변환할 경우: mapToObj() 사용
+* 📑 **flatMap()**
+  * 스트림의 요소가 배열이거나 map()의 연산결과가 배열인 경우(즉, 스트림의 타입이 Stream<T[]>인 경우) Stream<T>로 다루는 것이 더 편리할 때 사용
+  * 스트림의 스트림 형태가 아닌 스트림의 형태로 만들어줌
+      
 ## 3️⃣ 최종연산
 * forEach()
   중간연산을 하는 peek()과 달리 스트림의 요소를 소모
