01_사람을 사랑한 기술

--- a/스프링 입문을 위한 자바 객체 지향의 원리와 이해/01_사람을 사랑한 기술.md
+++ b/스프링 입문을 위한 자바 객체 지향의 원리와 이해/01_사람을 사랑한 기술.md
@@ -1,1 +1,27 @@
+**1️⃣ 기계어 - 0과 1의 행진 / 너무나 비인간적인 언어**   
+애드삭(EDSAC) 전용 1과 3을 더하는 기계어: 01010101 00000001 00001001  
+유니박(UNIVAC) 전용 1과 3을 더하는 기계어: 11011100 00011000 10011000   
+-> 기계어 코드가 CPU마다 다르기 때문에 애드삭 전용 기계어를 유니박에서 실행할 수 없고, 유니박 전용 기계어를 애드삭에서 실행할 수 없다   
+   
+**2️⃣ 어셈블리어 - 0과 1의 행진을 벗어나 인간 지향으로 / 기계어 니모닉**   
+"기계어의 명령들을 일상 용어로 표현하고 이걸 기계가 알 수 있는 기계어로 번역하게 하면 어떨까?"   
+-> 그래서 만들어진 것이 기계어 명령어와 일상용어를 일대일로 매칭하는 코드표   
+-> 니모닉과 기계어의 일대일 매칭 코드표(어셈블리어)   
+-> CPU마다 기계어가 다르기 때문에 CPu별로 어셈블리어도 다르다
+   
+**🖥️ C언어 - 강력한 이식성 / One Source Multi Object Use Anywhere**
+기존 어셈블리어라면 같은 일을 하는 프로그램의 소스 파일을 각 기계의 종류만큼 만들어야했다 **(멀티소스)**   
+-> C언어의 등장으로 소스 파일을 단 하나만 만들어도 가능하게 되었다 **(싱글소스)**   
+-> 하나의 소스 파일을 각 기계에 맞는 컴파일러로 컴파일만 하면 각 기계에 맞는 기계어 목적 파일이 만들어진다   
+-> 마찬가지로 한계가 존재, 운영체제별 소스 수정 과정이 필요   
+💡 One Source Fix Source Multi Object Use AnyWhere   
+   
+**🖥️ C++언어 - 정말 인간적인 프로그래밍 방법론, 객체지향**   
+C에 객체 지향 개념을 도입한 C++  
+💡 One Source Fix Source Multi Object Use AnyWhere   
 
+**🖥️ 자바 - 진정한 객체 지향 언어**   
+C++은 객체없는 프로그래밍도 가능하지만, JAVA는 아니다   
+가상머신(vertual Machine)의 등장   
+자바는 기종이 몇 개든 단하나의 JVM용 기계어를 생성하면 되는 것이다   
+💡 Write Once Use Anywhere
