--- a/스프링 입문을 위한 자바 객체 지향의 원리와 이해/03_자바와 객체 지향.md
+++ b/스프링 입문을 위한 자바 객체 지향의 원리와 이해/03_자바와 객체 지향.md
@@ -5,14 +5,16 @@
   * 다 - 다형성(Polymorphism): 사용 편의   
  💡 클래스와 객체에 대한 잘못된 메타포(붕어빵틀, 붕어빵)   
   ``` 붕어빵틀 붕어빵 = new 붕어빵틀(); ``` ➡️ 잘못된 표현임이 느껴짐   
-  ``` 클래스:객체=펭귄:뽀로로=사람:김연아 ``` ➡️ 해당 메타포가 올바름이 느껴짐     
-     
+  ``` 클래스:객체=펭귄:뽀로로=사람:김연아 ``` ➡️ 해당 메타포가 올바름이 느껴짐
+</br>   
+
 **✏️ 객체지향의 추상화는 모델링이다**     
   * 추상화: 구체적인 것을 분해해서 관찰자가 관심 있는 특성만 가지고 재조합 하는 것 ➡️ **📌모델링📌**
   * 객체(object): 세상에 존재하는 **유일무이**한 사물
   * 클래스(class): 같은 특성을 지닌 여러 객체를 총칭하는 집합의 개념
   * 💡애플리케이션 경계(Context) ➡️ ``` 내가 만들고자 하는 애플리케이션은 어디에서 사용될 것인가? ```
   * 💡자바는 객체 지향의 추상화를 class 키워드를 통해 지원 ➡️ ``` 추상화 = 모델링 = 자바의 class 키워드 ```
+</br>   
 
 **✏️ 클래스 멤버 vs 객체멤버 = static 멤버 vs 인스턴스 멤버**   
 |이름|다른 이름|사는 곳(T 메모리)|
@@ -20,4 +22,30 @@
 |static 변수|클래스 속성, 정적 변수, 정적 속성|스태틱 영역|
 |인스턴스 변수|객체 속성, 객체 변수|힙 영역|
 |local 변수|지역 변수|스택 영역(스택 프레임 내부)|
+</br>     
 
+**✏️ 상속:재사용+확장**
+  * 객체지향에서 상속은 상위클래스의 특성을 하위클래스에 상속하고 거기에 더해 필요한 특성을 추가, 즉 확장해서 사용할 수 있다는 의미   
+  * 💡객체지향에서 상속을 부모클래스-자식클래스라 표현하는 것은 특성을 빼고 클래스를 상속한다는 의미 ➡️ 상위클래스-하위클래스 또는 슈퍼클래스-서브클래스라고 표현 지향   
+    ![image](https://github.com/syoh98/TIL/assets/76934280/b6883b08-c847-4184-8f73-cc53d471e87b)    
+    ➡️ 위 이미지가 부모클래스-자식클래스라 표현할 때 
+    * 상속관계에서 반드시 만족해야 할 문장: **하위클래스는 상위클래스다**(LSP(리스코프 치환 원칙))   
+    ➡️ 아버지는 할아버지다, 삼촌은 할아버지다?? ➡️ 이상하다   
+    ![image](https://github.com/syoh98/TIL/assets/76934280/dad7d61d-8908-4009-8efc-410199747ea1)   
+    ➡️ 포유류는 동물이다 ➡️ 자연스럽다
+</br>
+
+**✏️ 상속은 is a 관계를 만족해야 한다?**
+  * ex) 펭귄 is a 동물(펭귄은 한 마리 동물이다): 펭귄은 클래스.동물도 클래스. 하지만 한 마리 동물은 **객체** ➡️ 오해를 일으킨다(하위클래스클래스는 하나의 상위클래스??오류)
+  * 객체지향의 상속은 상위 클래스의 특성을 재사용하는 것
+  * 객체지향의 상속은 상위 클래스의 특성을 확장하는 것
+  * 객체지향의 상속은 is a kind of 관계를 만족해야함
+</br>
+
+**✏️ 상속과 인터페이스**
+  * 인터페이스는 be able to, 즉 "무엇을 할 수 있는"이라는 표현 형태로 만드는 것이 좋음
+    * Serializable 인터페이스: 직렬화할 수 있는
+    * Clonable 인터페이스: 복제할 수 있는
+    * Comparable 인터페이스: 비교할 수 있는
+    * Runnable 인터페이스: 실행할 수 있는
+  * 💡상위클래스는 하위클래스에게 물려줄 특성이 풍성할수록 좋고(LSP), 인터페이스는 구현을 강제할 메서드의 개수가 적을수록 좋다(ISP)는 결론
