--- a/스프링 입문을 위한 자바 객체 지향의 원리와 이해/04_자바가 확장한 객체 지향.md
+++ b/스프링 입문을 위한 자바 객체 지향의 원리와 이해/04_자바가 확장한 객체 지향.md
@@ -30,7 +30,7 @@
   * 만들어진 객체가 특정 클래스의 인스턴스인지 물어보는 연산자. 연산의 결과로 true 또는 false를 반납
   * 사용법: ``` 객체_참조_변수 instanceof 클래스 ```
     
-**✏️ instanceof 연산자**
+**✏️ this 연산자**
   * 객체가 자기 자신을 지칭할 때 쓰는 키워드
   * 지역변수와 객체변수의 이름이 동일한 경우 this를 사용하여 객체변수를 쓰고 싶을 때 사용
   * 기억할 내용
