07_스프링 삼각형과 설정 정보

--- a/스프링 입문을 위한 자바 객체 지향의 원리와 이해/07_스프링 삼각형과 설정 정보.md
+++ b/스프링 입문을 위한 자바 객체 지향의 원리와 이해/07_스프링 삼각형과 설정 정보.md
@@ -1,12 +1,50 @@
-### 🔼 IoC/DI - 제어의 역전/의존성 주입
-* 프로그래밍에서 의존성이란? 전체가 부분에 의존하는 것, 프로그래밍에서 의존관계를 `new`로 표현된다
-* 스프링 없이 의존성 주입
-  * 생성자를 통한 의존성 주입   
-     ➡️ 기존 방식에서는 각 객체에 대해 정확히 알고 있어야만 그에 해당하는 객체를 생성할 수 있었다.   
-     ➡️ 의존성 주입을 적용할 경우 인터페이스를 구현한 어떤 객체가 들어오기만 하면 정상적으로 작동하게 된다.   
-     ➡️ 의존성 주입 시 확장성이 좋아진다.   
-  * 속성을 통한 의존성 주입
-* 스프링을 통한 의존성 주입
-  * XML 파일 사용
-  * 스프링 설정 파일(XML)에서 속성 주입
-  * @Autowired를 통한 속성 주
+## 📌 IoC/DI - 제어의 역전/의존성 주입
+* 프로그래밍에서 의존성이란?   
+  전체가 부분에 의존하는 것, 프로그래밍에서 의존관계를 `new`로 표현된다
+</br>
+
+## 📝 스프링 없이 의존성을 주입하는 방법   
+### 1️⃣ 예시
+![image](https://github.com/syoh98/TIL/assets/76934280/1fcdab71-deb6-457a-b2e2-9b9196d90451)
+### 2️⃣ 생성자를 통한 의존성 주입     
+![image](https://github.com/syoh98/TIL/assets/76934280/e069e299-011e-44e6-a05f-ceb6f64e4cf8)
+* 이런 구현 방식의 장점은?   
+  * 기존 코드에서는 Car가 구체적으로 `KoreaTire`를 생산할지 `AmericaTire`를 생산할지 결정했었다.   
+    ➡️ **이러한 코드는 유연성이 떨어진다**
+  * 자동차는 어떤 타이어를 장착할까를 고민하지 않아도 된다!
+  * 의존성 주입을 통해 확장성도 좋아지는데, 나중에 `ChinaTire`, `JapanTire`, `EnglandTire` 등등 새로운 타이어 브랜드가 생겨도 각 타이어 브랜드들이 `Tire` 인터페이스를 구현한다면, Car.java 코드를 변경할 필요 없이 사용할 수 있다
+### 3️⃣ 속성을 통한 의존성 주입
+![image](https://github.com/syoh98/TIL/assets/76934280/aa1776c7-fa98-4595-88e5-bb33f7272b88)
+* 생성자를 통한 의존성 주입과 다른 점은?
+  * 자동차를 생산할 때 한번 타이어를 장착하면 더 이상 타이어를 교체 장착할 방법이 없다는 문제가 생긴다.
+  * 더 현실적인 방법은 운전자가 원할 때 `Car`의 `Tire`를 교체하는 것이다.
+</br></br>
+
+## 📝 스프링을 통한 의존성 주입
+### 1️⃣ XML 파일 사용
+<img src="https://github.com/syoh98/TIL/assets/76934280/57614b7b-694e-44da-8575-028d21f8b612" width="600"/></br>
+* 스프링을 도입해서 얻는 이득은 무엇일까?   
+  * 자동차의 타이어 브랜드를 변경 할 때 그 무엇도 재컴파일/재배포하지 않고 `XML` 파일만 수정하면 프로그램의 실행결과를 바꿀 수 있다는 것이다!
+### 2️⃣ 스프링 설정 파일(XML)에서 속성 주입
+![image](https://github.com/syoh98/TIL/assets/76934280/3b90e064-a8e4-48b1-9d65-df45009ee2a5)
+* 자바코드와 XML 설정을 익혀야 하는 부담이 있긴 하지만, 더욱 현실적인 내용을 반영하기에 이해하기 쉽고 유지보수하기 편한 방식으로 변했다!
+### 3️⃣ @Autowired를 통한 속성 주입
+<img src="https://github.com/syoh98/TIL/assets/76934280/e8465185-34e6-425a-8bfd-5c6218c7120e" width="600"/></br>
+* `@Autowired`의 의미는 무엇일까?
+  * 스프링 설정 파일을 보고 자동으로 속성의 설정자 메서드에 해당하는 역할을 해주겠다는 의미이다
+  * property 태그가 사라진다. `@Autowired`를 통해 `car`의 property를 자동으로 엮어줄 수 있으므로 **(자동 의존성 주입)** 생략이 가능해진 것이다.
+### 4️⃣ @Resource를 통한 속성 주입
+<img src="https://github.com/syoh98/TIL/assets/76934280/7a3f9a39-457e-46c0-88ff-99a607dd87bf" width="400"/></br>
+* `@Autowired`와 다른점은 무엇일까?
+  * `@Resource`: 자바 표준 어노테이션, type과 id 중 매칭 우선순위는 id가 높다.(byName 먼저, 못찾으면 byType)
+  * `@Autowired`: 스프링 어노테이션, type과 id 중 매칭 우선순위는 type이 높다.(byType 먼저, 못찾으면 byName)
+</br></br>
+## 📌 AOP(Aspect-Oriented Programming), 관점 지향 프로그래밍
+* 스프링 DI가 의존성(`new`)에 대한 주입이라면 스프링 AOP는 로직(code) 주입이라고 할 수 있다
+* 횡단 관심사: 다수의 모듈에 공통적으로 나타나는 부분
+* 코드는 핵심 관심사+횡단 관심사로 이루어져있다
+</br></br>
+## 📌 PSA - 일관성 있는 서비스 추상화
+* 서비스 추상화의 예의 하나인 JDBC. JDBC라고 하는 표준 스펙이 있기에 오라클을 사용하든, MYSQL을 사용하든, MS-SQL을 사용하든 `Connection`, `Statement`, `ResultSet`을 이용해 공통된 방식으로 코드를 작성할 수 있다
+* 서비스 추상화를 해주면서 일관성 있는 방식을 제공한다고 해서 PSA라고 한다
+* 스프링은 OXM뿐만 아니라 ORM, 캐시, 트랜잭션 등 다양한 기술에 PSA를 제공한다
