인증과 인가

--- a/인증과 인가.md
+++ b/인증과 인가.md
@@ -15,8 +15,9 @@
   * 권한 부여는 인증을 하기에는 유용하지 않을 수 있다.
  
 ## 📌 로그인과 인증/인가
-💡 웹사이트는 HTTP 통신 위에서 동작하기 때문에 웹 사이트 내의 모든 요청과 응답은 stateless한 특성을 가진다(= **서버에서 client의 이전 상태를 기억하고 있지 않는다**)
-➡️ 이러한 상황에서 웹사이트를 이용하려면 인증/인가가 필요한 모든 상황에서 사용자는 반복적으로 ID/PW를 입력해야하는 불상사가 일어난다!
+💡 웹사이트는 HTTP 통신 위에서 동작하기 때문에 웹 사이트 내의 모든 요청과 응답은 stateless한 특성을 가진다   
+(= **서버에서 client의 이전 상태를 기억하고 있지 않는다**)   
+➡️ 이러한 상황에서 웹사이트를 이용하려면 인증/인가가 필요한 모든 상황에서 사용자는 반복적으로 ID/PW를 입력해야하는 불상사가 일어난다!   
 ➡️ stateless한 HTTP 위에서 인증과 인가를 구현하는 방법으로는 대표적으로 Session방식과 Token 방식이 존재한다
 
 ## 📌 로그인의 세션방식과 토큰 방식
@@ -41,7 +42,38 @@
 5. `Token`을 응답 Header로 넘겨준다.
 6. 클라이언트가 해당 정보를 저장한다. (서버에 요청을 할 때마다 해당 `Token`을 HTTP Request Header에 포함하여 서버에 전달한다.)   
 
-참고
+</br>
+
+## 💡 ‘상태’는 어떤 의미일까?
+* Stateful(상태유지)
+  * 클라이언트의 요청이 서버와 독립적으로 처리되지 않는다.   
+    (=이전 요청이 다음 요청에 영향을 끼친다.)
+* Stateless(무상태)
+  * 클라이언트의 요청이 서버에서 독립적으로 처리된다.   
+    (=이전 요청이 다음 요청에 영향을 미치지 않는다.)   
+* ➡️ 결과적으로 클라이언트의 정보가 서버에서 관리되는가 아닌가를 판단하여 `Stateful`과 `Stateless`를 나눈다.
+</br>
+
+## 💡 왜 세션은 Stateful이고 토큰은 Stateless일까?
+* 세션 방식   
+  클라이언트가 요청을 보내면, 해당 서버가 클라이언트에게 `SESSIONID`를 부여한다.   
+  유저 정보 즉, `SESSIONID`는 서버에서 관리한다.   
+* ➡️ 서버가 유저 정보를 관리하고 있다. `Stateful`하다.
+* 토큰 방식을 구현한 JWT
+  * JWT: 웹에서 사용하는 JSON 형식으로 정보를 담고 있는 토큰
+  * JWT의 구성
+    * Header
+      * 토큰이 어떠한 알고리즘으로 암호화 되어 있는지에 대한 정보
+    * Payload
+      * 토큰이 담고자 하는 정보
+    * Signature
+      * 유효한 토큰인지 확인할 수 있는 인증 정보
+      * Header와 Payload는 단순이 JSON 문자열을 base64로 인코딩한 것에 불과하기 때문에, 해커가 토큰을 탈취하여 수정 후 서버로 보내는 등의 경우를 방지하기 위해 존재   
+* ➡️ 이렇듯 **토큰이 서버가 필요한 유저에 대한 정보를 담고 있기 때문에** 즉, **서버가 본인이 필요한 유저 정보를 관리하고 있지 않으므로** 토큰방식은 `Stateless`한 것이다.
+</br>
+
+참고   
 * https://auth0.com/intro-to-iam/authentication-vs-authorization
 * https://velog.io/@dev-joon/%EC%9D%B8%EC%A6%9DAuthentication%EA%B3%BC-%EC%9D%B8%EA%B0%80Authorization
 * https://www.youtube.com/watch?v=y0xMXlOAfss
+* https://80000coding.oopy.io/9a56cae9-8626-4025-b3f9-c02251980d0f
