인증과 인가

--- a/인증과 인가.md
+++ b/인증과 인가.md
@@ -72,6 +72,15 @@
 * ➡️ 이렇듯 **토큰이 서버가 필요한 유저에 대한 정보를 담고 있기 때문에** 즉, **서버가 본인이 필요한 유저 정보를 관리하고 있지 않으므로** 토큰방식은 `Stateless`한 것이다.
 </br>
 
+## 💡 토큰이라고 모두 Stateless한 것은 아니다
+* Token 방식의 문제(JWT)   
+해커가 토큰을 탈취할 경우, JWT의 토큰 만료시간을 짧게 설정하여 남용을 방지하는 조치를 취할 수 있지만 이는 **본래의 사용자 또한 사용할 수 없게 되는 부작용을 초래**한다.   
+➡️ 이를 방지하기 위해 `Refresh Token`이 만들어졌다.   
+**💡 문제는, 이 `Refresh Token`을 DB에서 관리한다는 점이다!**   
+➡️ 이는 결국 Stateless 하지 않다는 것이다.
+* 또한 토큰을 발급한다고 하더라고, 서버에서 유저의 화이트리스트/블랙리스트를 관리한다면 유저의 상태를 관리하게 되는 것이다. 세션과 다를게 없어진다.
+</br>
+
 참고   
 * https://auth0.com/intro-to-iam/authentication-vs-authorization
 * https://velog.io/@dev-joon/%EC%9D%B8%EC%A6%9DAuthentication%EA%B3%BC-%EC%9D%B8%EA%B0%80Authorization
