01_디자인 패턴, 꼭 써야 한다

--- a/자바 성능 튜닝 이야기/01_디자인 패턴, 꼭 써야 한다.md
+++ b/자바 성능 튜닝 이야기/01_디자인 패턴, 꼭 써야 한다.md
@@ -17,7 +17,10 @@
 **✏️ J2EE 디자인 패턴이란?**   
 * 디자인 패턴이란?   
   시스템을 만들기 위해서 전체 중 일부 의미 있는 클래스들을 묶은 각각의 집합
-* 종류
+* 종류   
+  ![image](https://github.com/syoh98/TIL/assets/76934280/fad428d6-aeac-4509-b794-b460585b62df)</br>
+  ➡️ 사용자의 요청이 처리되는 순서로 생각하면서 위에서 아래로 보자
+  
   * Intercepting Filter 패턴: 요청 타입에 따라 다른 처리를 하기 위한 패턴
   * Front Controller 패턴: 요청 전후에 처리하기 위한 컨트롤러를 지정하는 패턴
   * View Helper 패턴: 프레젠테이션 로직과 상관없는 비즈니스 로직을 헬퍼로 지정하는 패턴
@@ -26,11 +29,12 @@
   * Dispatcher View 패턴: Front Controller와 View Helper로 디스패처 컴포넌트를 형성하고 뷰처리가 종료될 때까지 다른 활동을 지연
   * Businsess Delegate 패턴: 비즈니스 서비스 접근을 캡슐화하는 패턴
 * 💡성능과 관련된 패턴은 무엇일까?
-  * Transfer Object 패턴(데이터를 전송하기 위한 객체에 대한 패턴)
+  * **Transfer Object 패턴(데이터를 전송하기 위한 객체에 대한 패턴)**
+    * Transfer Object를 만들어 하나의 객체에 여러 타입의 값을 전달하는 일을 수행한다.
     * getter와 setter, toString을 생성
     * ✏️ 이 패턴을 사용한다고 성능이 좋아질까?
       * 아니다. 하지만, 하나의 객체에 결과 값을 담아올 수 있어 두 번, 세 번씩 요청을 하는 일이 발생하는 것을 줄여준다.
-  * Service Locator 패턴(서비스와 컴포넌트 검색을 쉽게 하는 패턴)
+  * **Service Locator 패턴(서비스와 컴포넌트 검색을 쉽게 하는 패턴)**
     * EJB Home 객체나 DB의 DataSource를 찾을 때 **소요되는 응답속도를 감소**시키기 위해 사용
     * cache라는 Map 객체에 home 객체를 찾은 결과를 보관하여 저장
     * **cache에서 해당 객체를 찾고 존재하지 않으면 메모리에서 해당 객체를 찾는 방식**
