02_내가 만든 프로그램의 속도를 알고싶다

--- a/자바 성능 튜닝 이야기/02_내가 만든 프로그램의 속도를 알고싶다.md
+++ b/자바 성능 튜닝 이야기/02_내가 만든 프로그램의 속도를 알고싶다.md
@@ -36,6 +36,10 @@
   * JMH: JDK를 오픈 소스로 제공하는 OpenJDK에서 만든 성능 측정용 라이브러리
     * 여러 개의 스레드로 테스트도 가능하고, 워밍업 작업도 자동으로 수행해주기 때문에 정확한 측정이 가능하다
     * JMH를 사용하면 일일이 케이스를 구성할 필요 없이 각 케이스별로 테스트를 수행하고 그 결과를 확인 할 수 있다.
+    * 어노테이션
+      * `@GenerateMicroBenchmark`: 측정 대상이 되는 메서드를 선언할 때 사용. 이 어노테이션을 지정하지 않으면 테스트 대상에서 제외된다.
+      * `@BenchmarkMode({Mode.Throughput, Mode.AverageTime, Mode.SampleTime, Mode.SingleShotTIme})`
+      * `@OutputTimeUnit(TimeUnit.MICROSECONDS)`: 출력되는 시간 단위를 밀리초로 지정한다.
   * Caliper
   * JUnitPerf
   * JunitBench
