--- a/자바 성능 튜닝 이야기/17_도대체 GC는 언제 발생할까?.md
+++ b/자바 성능 튜닝 이야기/17_도대체 GC는 언제 발생할까?.md
@@ -20,7 +20,9 @@ public String makeQuery(String code) {
 </br>
 
 ### ✏️자바의 Runtime data area는 이렇게 구성된다
-자바에서 데이터를 처리하기 위한 영역에는 어떤 것들이 있을까>
+자바에서 데이터를 처리하기 위한 영역에는 어떤 것들이 있을까?   
+<img src="https://github.com/syoh98/TIL/assets/76934280/f45babc3-f03c-436f-942e-efab582c1b4b" width="500"/></br>
+
 * PC 레지스터
 * JVM 스택
 * 힙(Heap)
@@ -53,3 +55,66 @@ GC 작업을 하는 가비지 콜렉터의 역할
 * 사용하지 않는 메모리 인식   
 ➡️ 사용하지 않는 메모리를 인식하는 작업을 수행하지 않으면, 할당한 메모리 영역이 꽉차서 JVM에 행이 걸리거나, 더 많은 메모리를 할당하려는 현상이 발생할 것이다.   
 ➡️ 만약 JVM의 최대 메모리 크기를 지정해서 전부 사용한 다음, GC를 해도 더 이상 사용 가능한 메모리 영역이 없는데 계속 메모리를 할당하려고 하면 `OutOfMemory`가 발생하여 JVM이 다운될 수도 있다.
+* JVM의 Heap 영역   
+<img src="https://github.com/syoh98/TIL/assets/76934280/01768993-8875-4fb7-b343-443bf08da24c" width="700"/></br>
+  * 일단 메모리에 객체가 생성되면, Eden 영역에 객체가 지정된다
+  * Eden 영역에 데이터가 꽉차면, 이 영역에 있던 객체가 어디론가 옮겨지거나 삭제 되는데, 옮겨가는 위치가 Survivor 영역이다.(두 개의 Survivor의 우선순위는 존재하지 않는다)
+    * Survivor 두개의 영역 중 한 영역은 반드시 비어 있어야 한다.
+  * 할당된 Survivor 영역이 차면, GC가 되면서 Eden 영역에 있는 객체와 꽉 찬 Survivor 영역에 있는 객체가 비어있는 Survivor 영역으로 이동한다.
+  * 이러한 작업을 반복하면서, Survivor 1과 2를 왔다갔다 하던 객체들은 Old 영역으로 이동한다
+    * Young 영역에서 Old 영역으로 넘어가는 객체 중 Survivor 영역을 거치지 않고 바로 Old 영역으로 이동하는 객체가 있을 수 있다.(객체의 크기가 Survivor 영역의 크기보다 큰 경우)
+   
+### ✏️GC의 종류
+1. Minor GC
+   * Young 영역에서 발생하는 GC
+2. Major GC
+   * Old 영역에서 발생하는 GC   
+* 이 두가지가 어떻게 상호작용하느냐에 따라서 GC 방식에 차이가 나며, 성능에도 영향을 준다.
+
+### ✏️5가지 GC 방식
+* Serial GC   
+  <img src="https://github.com/syoh98/TIL/assets/76934280/9dfad395-6b77-46db-8387-35a4ed667ecf" width="300"/></br>
+  * 실행순서
+    * 살아 있는 객체들은 Eden 영역에 있다
+    * Eden 영역이 꽉차게 되면 Survivor영역(비어있는 영역)으로 살아있는 객체가 이동한다.
+    * Survivor영역끼리 왔다갔다 하다가 꽉차면, Eden영역, Survivor 영역에 남아있는 객체들이 Old 영역으로 이동한다.
+    * 이후 Old 영역에 있는 객체들은 mark-sweep-compact 컬렉션 알고리즘을 따른다.
+  * 대기 시간이 많아도 크게 문제되지 않는 시스템(클라이언트 종류의 장비)에서 사용된다
+  * 자바 명령 옵션: `-XX:+UseSerialGC`
+* Parallel GC   
+  <img src="https://github.com/syoh98/TIL/assets/76934280/e51225d7-12e3-4839-bcee-3d615018b6b5" width="300"/></br>
+  * 이 방식의 목표는 다른 CPU가 대기 상태로 남아 있는 것을 최소화 하는 것이다.
+  * `Serial GC`와는 다르게 Young영역에서의 컬렉션을 병렬(parallel)로 처리한다.
+  * Old 영역의 GC는 `Serial GC`와 마찬가지로 Mark-sweep-compact 컬렉션 알고리즘을 사용한다.
+  * 많은 CPU를 사용하기 때문에 GC의 부하를 줄이고 애플리케이션의 처리량을 증가시킬 수 있다.
+  * 자바 명령 옵션: `-XX:+UseParallelGC`
+* Parallel Compacting GC
+  * **`Parallel GC`와 다른 점은 Old 영역 GC에서 새로운 알고리즘을 사용한다.**
+  * Old 영역 GC
+    * 표시단계: 살아 있는 객체를 식별하여 표시해놓는 단계
+    * 종합단계: 이전에 GC를 수행하여 compaction된 영역에 살아있는 객체의 위치를 조사하는 단계
+    * compaction 단계: compaction을 수행하는 단계. 수행 이후에는 compaction된 영역과 비어있는 영역으로 나뉜다.
+  * 자바 명령 옵션: `-XX:+UseParallelOldGC` 
+* Concurrent Mark-Sweep(CMS) GC   
+  <img src="https://github.com/syoh98/TIL/assets/76934280/7123eaf6-76fb-4105-b680-1c89f904327c" width="400"/></br>
+  * Heap 메모리 영역의 크기가 클 때 적합하다.
+  * Young 영역에 대한 GC는 `Parallel GC`와 동일하다.
+  * 실행순서
+    * 초기 표시 단계: 매우 짧은 대기 시간으로 살아 있는 객체를 찾는 단계
+    * Concurrent 표시 단계: 서버 수행과 동시에 살아있는 객체에 표시를 해놓는 단계
+    * 재표시 단계: Concurrent 표시 단계에서 표시하는 동안 변경된 객체에 대해서 다시 표시하는 단계
+    * Concurrent Sweep 단계: 표시되어 있는 쓰레기를 정리하는 단계
+  * 2개 이상의 프로세서를 사용하는 서버에 적당하다.(웹서버)
+  * CMS는 Compaction 단계를 거치지 않는다.
+  * 자바 명령 옵션: `-XX:+UseConcMarkSweepGC`
+* Garbage First(G1) GC   
+  <img src="https://github.com/syoh98/TIL/assets/76934280/5b9f1406-45dd-43f0-8c72-23d5bcd7fda0" width="500"/></br>
+  * region이 각각 Eden, Survivor, Old 영역의 역할을 변경해가면서 GC를 수행한다.
+  * 실행순서
+    * 초기 표시: Old 영역에 있는 객체에서 Survivor 영역의 객체를 참조하고 있는 객체들을 표시한다.
+    * 기본 구역 스캔: Old 영역 참조를 위해서 Survivor 영역을 훑는다.
+    * Concurrent 표시: 전체 힙 영역에 살아있는 객체를 찾는다. 만약 이 때 Young GC가 발생하면 잠시 멈춘다.
+    * remark: 힙에 살아있는 객체들의 표시 작업을 완료한다
+    * cleaning: 살아있는 객체와 비어있는 구역을 식별하고, 필요없는 객체들을 지운다. 비어있는 구역을 초기화한다.
+    * 복사: 살아있는 객체들을 비어있는 구역으로 모은다.
+
