01_오브젝트와 의존관계

--- a/토비의 스프링 3.1/01_오브젝트와 의존관계.md
+++ b/토비의 스프링 3.1/01_오브젝트와 의존관계.md
@@ -87,13 +87,22 @@ public class UserDao {
 * 인터페이스를 통해 접근하게 하면 실제 구현 클래스를 바꿔도 신경 쓸 일이 없다.
 * https://github.com/bingbingpa/dev-book/blob/main/toby-spring/src/main/java/me/bingbingpa/vol1/ch1/dao/step5/ConnectionMaker.java
 * **UserDao는 자신이 사용할 클래스가 어떤 것인지 몰라도 된다. 단지 인터페이스를 통해 원하는 기능을 사용하기만 하면 된다.**
+* UserDao의 다른 모든 곳에서는 인터페이스를 이용하게 만들어서 DB 커넥션을 제공하는 클래스에 대한 구체적인 정보는 모두 제거가 가능했지만, 초기에 한 번 어떤 클래스의 오브젝트를 사용할지를 결정하는 생성자의 코드는 제거되지 않고 남아 있다.
 ### 💡 관계설정 책임의 분리
+* UserDao와 UserDao가 사용할 ConnectionMaker의 특정 구현 클래스 사이의 관계를 설정해주는 것에 관한 관심.
+* ➡️ 이 관심사를 담은 코드를 UserDao에서 분리하지 않으면 UserDao는 결코 독립적으로 확장 가능한 클래스가 될 수 없다.
+* https://github.com/bingbingpa/dev-book/blob/main/toby-spring/src/main/java/me/bingbingpa/vol1/ch1/dao/step5/UserDaoTest.java
+  * 이 관심을 분리해서 클라이언트에게 떠넘겨주자
+  * UserDao에 있으면 안 되는 다른 관심사항, 책임을 클라이언트로 떠넘기는 작업이 끝났다.
 ### 💡 원칙과 패턴
-* 개방 폐쇄 원칙
+* 개방 폐쇄 원칙(OCP, Open-Closed Principle)
+  * 클래스나 모듈은 확장에는 열려 있어야 하고 변경에는 닫혀 있어야 한다.
 * 높은 응집도와 낮은 결합도
-  * 높은 응집도
-  * 낮은 결합도
+  * 높은 응집도: 변화가 일어날 때 해당 모듈에서 변하는 부분이 크다.
+  * 낮은 결합도: 하나의 변경이 발생할 때 여타 모듈과 객체로 변경에 대한 요구가 전파되지 않는 상태
+    * 결합도가 높아지면 변경에 따르는 작업량이 많아지고, 변경으로 인해 버그가 발생할 가능성이 높아진다.
 * 전략 패턴
+  * 자신의 기능 맥락에서, 필요에 따라 변경이 필요한 알고리즘을 인터페이스를 통해 통째로 외부로 분리시키고, 이를 구현한 구체적인 알고리즘 클래스를 필요에 따라 바꿔서 사용할 수 있게 하는 디자인 패턴.
 
 ## 🌱 1.4 제어의 역전(IOC)
 
