--- a/토비의 스프링 3.1/01_오브젝트와 의존관계.md
+++ b/토비의 스프링 3.1/01_오브젝트와 의존관계.md
@@ -103,12 +103,99 @@ public class UserDao {
     * 결합도가 높아지면 변경에 따르는 작업량이 많아지고, 변경으로 인해 버그가 발생할 가능성이 높아진다.
 * 전략 패턴
   * 자신의 기능 맥락에서, 필요에 따라 변경이 필요한 알고리즘을 인터페이스를 통해 통째로 외부로 분리시키고, 이를 구현한 구체적인 알고리즘 클래스를 필요에 따라 바꿔서 사용할 수 있게 하는 디자인 패턴.
+</br>
 
 ## 🌱 1.4 제어의 역전(IOC)
+원래 UserDaoTest는 UserDao의 기능이 잘 동작하는지를 테스트하려고 만든 것인데, 또 다른 책임까지 떠맡고 있어 문제가 있다.   
+성격이 다른 책임이나 관심사는 분리해버리자.   
+### 💡 오브젝트팩토리
+팩토리: 오브젝트를 생성하는 쪽과 생성된 오브젝트를 사용하는 쪽의 역할과 책임을 깔끔하게 분리하려는 목적으로 사용한다.(어떻게 만들지와 어떻게 사용할지는 다른 관심이다.)
+* https://github.com/bingbingpa/dev-book/blob/main/toby-spring/src/main/java/me/bingbingpa/vol1/ch1/dao/step6/UserDaoFactory.java
+  * UserDaoTest는 이제 UserDao가 어떻게 만들어지는지 어떻게 초기화되어 있는지에 신경쓰지 않고 팩토리로부터 UserDao 오브젝트를 받아다가, 자신의 관심사인 테스트를 위해 활용하기만 하면 그만이다.
+  * ➡️ 각각이 자신의 책임에만 충실하도록 역할에 따라 분리되었다.
+* 만약, 다른 Dao에서 ConnectionMaker를 사용하려고 하면 중복된다
+  ```java
+  public class DaoFactory {
+      public UserDao userDao() {
+          return new UserDao(new DConnectionMaker());    // ConncetionMaker 구현 클래스를 선정하고 생성하는 코드의 중복
+      }
+      public AccountDao accountDao() {
+          return new AccountDao(new DConnectionMaker()); // ConncetionMaker 구현 클래스를 선정하고 생성하는 코드의 중복
+      }
+  }
+  ```
+  * 이런 경우 오브젝트를 만드는 코드를 별도의 메서드로 뽑아내자
+* ✏️ **제어의 역전이란?**
+  * 프로그램의 제어 흐름 구조가 뒤바뀌는 것이다.
+  * 제어의 역전에서는 오브젝트가 자신이 사용할 오브젝트를 스스로 선택하지 않는다. 당연히 생성하지도 않는다.
+  * 또 자신도 어떻게 만들어지고 어디서 사용되는지를 알 수 없다. 모든 제어 권한을 자신이 아닌 다른 대상에게 위임하기 때문이다.
+  * 앞서 관심을 분리하고 책임을 나누고 유연하게 확장 가능한 구조로 만들기 위해 DaoFactory를 도입했던 과정이 IoC를 적용하는 작업이었다고 볼 수 있다!
+</br>
 
 ## 🌱 1.5 스프링의 IoC
+### 💡 오브젝트 팩토리를 이용한 스프링 IoC
+* 애플리케이션 컨텍스트와 설정정보
+  * `1.4`에서 애플리케이션의 로직을 담고 있는 컴포넌트와 설계도 역할을 하는 팩토리를 구분했었다.
+  * 이 설계도라는 게 애플리케이션 컨텍스트와 설정정보를 말한다고 보면 된다.
+  * 그 자체로는 애플리케이션 로직을 담당하지는 않지만 IoC 방식을 이용해 애플리케이션 컴포넌트를 생성하고, 사용할 관계를 맺어주는 등의 책임을 담당하는 것이다.
+* DaoFactory를 사용하는 애플리케이션 컨텍스트
+  * `@Configuration`: 애플리케이션 컨텍스트 또는 빈 팩토리가 사용할 설정정보라는 표시
+  * `@Bean`: 오브젝트 생성을 담당하는 IoC용 메서드라는 표시
+    * ➡️ 이 두개의 어노테이션은 자바코드의 탈을 쓰고 있지만, 사실은 XML과 같은 스프링 전용 설정정보라고 보는 것이 좋다.
+### 💡 애플리케이션 컨텍스트의 동작방식
+애플리케이션 컨텍스트를 사용했을 때 얻을 수 있는 장
+* 클라이언트는 구체적인 팩토리 클래스를 알 필요가 없다
+* 애플리케이션 컨텍스트는 종합 IoC 서비스를 제공해준다
+* 애플리케이션 컨텍스트는 빈을 검색하는 다양한 방법을 제공한다
+### 💡 스프링 IoC의 용어 정리
+* 빈
+  * 스프링이 IoC 방식으로 관리하는 오브젝트
+  * 주의할 점: 스프링을 사용하는 애플리케이션에서 만들어지는 모든 오브젝트가 다 빈은 아니다.
+  * 스프링이 직접 생성과 제어를 담당하는 오브젝트만을 빈이라고 부른다.
+* 빈 팩토리
+  * 스프링의 IoC를 담당하는 핵심 컨테이너
+  * 빈을 등록하고, 생성하고, 조회하고 돌려주고, 그 외의 부가적인 빈을 관리하는 기능을 담당한다.
+* 애플리케이션 컨텍스트
+  * 빈 팩토리를 확장한 IoC 컨테이너
+  * 빈을 등록하고 관리하는 기본적인 기능은 빈팩토리와 동일하다. 여기에 스프링이 제공하는 각종 부가 서비스를 추가로 제공한다.
+  * 빈 팩토리라고 부를 때는 주로 빈의 생성과 제어의 관점에서 이야기하는 것이고, 애플리케이션 컨텍스트라고 할 때는 스프링이 제공하는 애플리케이션 지원 기능을 모두 포함해서 이야기하는 것이다.
+  * ApplicationContext라고 적으면 애플리케이션 컨텍스트가 구현해야 하는 기본 인터페이스를 가리키는 것이기도 하다.
+  * ApplicationContext는 BeanFactory를 상속한다.
+* 설정정보/설정 메타정보
+  * 애플리케이션 컨텍스트 또는 빈팩토리가 IoC를 적용하기 위해 사용하는 메타정보
+  * 영어로 `configuration`, 구성정보/형상정보의 의미
+* 컨테이너 또는 IoC 컨테이너
+  * IoC 방식으로 빈을 관리한다는 의미에서 애플리케이션 컨텍스트나 빈 팩토리를 컨테이너 또는 IoC 컨테이너라고도 한다.
+* 스프링 프레임워크
+  * IoC 컨테이너, 애플리케이션 컨텍스트를 포함해서 스프링이 제공하는 모든 기능을 통틀어 말할 때 주로 사용한다.
+</br>
 
 ## 🌱 1.6 싱글톤 레지스트리와 오브젝트 스코프
+스프링은 여러 번에 걸쳐 빈을 요청하더라도 매번 동일한 오브젝트를 돌려준다.   
+단순하게 `getBean()`을 실행할 때마다 `userDao()`메서드를 호출하고, 매번 new에 의해 새로운 UserDao가 만들어지지 않는다. 왜그럴까?
+애플리케이션 컨텍스트는 싱글톤을 저장하고 관리하는 `싱글톤 레지스트리`이기도 하다.
+## 💡싱글톤 레지스트리로서의 애플리케이션 컨텍스트
+* 서버 애플리케이션과 싱글톤
+  * 왜 스프링은 싱글톤으로 빈을 만드는 것일까? 이는 스프링이 주로 적용되는 대상이 자바 엔터프라이즈 기술을 사용하는 서버환경이기 때문이다.
+  * 애플리케이션 안에 제한된 수, 대개 한 개의 오브젝트만 만들어서 사용하는 것이 싱글톤 패턴의 원리다.
+* 싱글톤 패턴의 한계
+  * private 생성자를 갖고 있기 때문에 상속할 수 없다
+  * 싱글톤은 테스트하기가 힘들다
+  * 서버환경에서는 싱글톤이 하나만 만들어지는 것을 보장하지 못한다.
+  * 싱글톤의 사용은 전역 상태를 만들 수 있기 때문에 바람직하지 못하다.
+* 싱글톤 레지스트리
+  * 자바의 기본적인 싱글톤 패턴의 구현 방식은 여러 가지 단점이 있기 때문에, 스프링은 직접 싱글톤 형태의 오브젝트를 만들고 관리하는 기능을 제공한다.
+    * ➡️이것이 `싱글톤 레지스트리`다.
+  * 싱글톤 레지스트리의 장점은 스태틱 메서드와 private 생성자를 사용해야 하는 비정상적인 클래스가 아니라 **평범한 자바 클래스를 싱글톤으로 활용하게 해준다는 점**이다.
+  * 가장 중요한 것은 싱글톤 패턴과 달리 스프링이 지지하는 객체지향적인 설계 방식과 원칙, 디자인 패턴 등을 적용하는 데 아무런 제약이 없다는 점이다.
+## 💡싱글톤과 오브젝트의 상태
+* 싱글톤은 멀티스레드 환경이라면 여러 스레드가 동시에 접근해서 사용할 수 있기 때문에 상태 관리에 주의를 기울여야 한다.
+* 상태가 없는 방식으로 클래스를 만드는 경우에 각 요청에 대한 정보나, DB나 서버의 리소스로부터 생성한 정보는 어떻게 다뤄야할까?
+  * 이 때는 파라미터와 로컬 변수, 리턴 값들을 이용하자.
+## 💡스프링 빈의 스코프
+* 스프링 빈의 기본 스코프는 싱글톤이다
+* 싱글톤 스코프는 컨테이너 내의 한 개의 오브젝트만 만들어져서, 강제로 제거하지 않는 한 스프링 컨테이너가 존재하는 동안 계속 유지된다.
+</br>
 
 ## 🌱 1.7 의존관계 주입(DI)
 
