--- a/토비의 스프링 3.1/01_오브젝트와 의존관계.md
+++ b/토비의 스프링 3.1/01_오브젝트와 의존관계.md
@@ -148,25 +148,25 @@ public class UserDao {
 * 애플리케이션 컨텍스트는 종합 IoC 서비스를 제공해준다
 * 애플리케이션 컨텍스트는 빈을 검색하는 다양한 방법을 제공한다
 ### 💡 스프링 IoC의 용어 정리
-* 빈
+* **빈**
   * 스프링이 IoC 방식으로 관리하는 오브젝트
   * 주의할 점: 스프링을 사용하는 애플리케이션에서 만들어지는 모든 오브젝트가 다 빈은 아니다.
   * 스프링이 직접 생성과 제어를 담당하는 오브젝트만을 빈이라고 부른다.
-* 빈 팩토리
+* **빈 팩토리**
   * 스프링의 IoC를 담당하는 핵심 컨테이너
   * 빈을 등록하고, 생성하고, 조회하고 돌려주고, 그 외의 부가적인 빈을 관리하는 기능을 담당한다.
-* 애플리케이션 컨텍스트
+* **애플리케이션 컨텍스트**
   * 빈 팩토리를 확장한 IoC 컨테이너
   * 빈을 등록하고 관리하는 기본적인 기능은 빈팩토리와 동일하다. 여기에 스프링이 제공하는 각종 부가 서비스를 추가로 제공한다.
   * 빈 팩토리라고 부를 때는 주로 빈의 생성과 제어의 관점에서 이야기하는 것이고, 애플리케이션 컨텍스트라고 할 때는 스프링이 제공하는 애플리케이션 지원 기능을 모두 포함해서 이야기하는 것이다.
   * ApplicationContext라고 적으면 애플리케이션 컨텍스트가 구현해야 하는 기본 인터페이스를 가리키는 것이기도 하다.
   * ApplicationContext는 BeanFactory를 상속한다.
-* 설정정보/설정 메타정보
+* **설정정보/설정 메타정보**
   * 애플리케이션 컨텍스트 또는 빈팩토리가 IoC를 적용하기 위해 사용하는 메타정보
   * 영어로 `configuration`, 구성정보/형상정보의 의미
-* 컨테이너 또는 IoC 컨테이너
+* **컨테이너 또는 IoC 컨테이너**
   * IoC 방식으로 빈을 관리한다는 의미에서 애플리케이션 컨텍스트나 빈 팩토리를 컨테이너 또는 IoC 컨테이너라고도 한다.
-* 스프링 프레임워크
+* **스프링 프레임워크**
   * IoC 컨테이너, 애플리케이션 컨텍스트를 포함해서 스프링이 제공하는 모든 기능을 통틀어 말할 때 주로 사용한다.
 </br>
 
@@ -174,31 +174,96 @@ public class UserDao {
 스프링은 여러 번에 걸쳐 빈을 요청하더라도 매번 동일한 오브젝트를 돌려준다.   
 단순하게 `getBean()`을 실행할 때마다 `userDao()`메서드를 호출하고, 매번 new에 의해 새로운 UserDao가 만들어지지 않는다. 왜그럴까?
 애플리케이션 컨텍스트는 싱글톤을 저장하고 관리하는 `싱글톤 레지스트리`이기도 하다.
-## 💡싱글톤 레지스트리로서의 애플리케이션 컨텍스트
-* 서버 애플리케이션과 싱글톤
+### 💡싱글톤 레지스트리로서의 애플리케이션 컨텍스트
+* **서버 애플리케이션과 싱글톤**
   * 왜 스프링은 싱글톤으로 빈을 만드는 것일까? 이는 스프링이 주로 적용되는 대상이 자바 엔터프라이즈 기술을 사용하는 서버환경이기 때문이다.
   * 애플리케이션 안에 제한된 수, 대개 한 개의 오브젝트만 만들어서 사용하는 것이 싱글톤 패턴의 원리다.
-* 싱글톤 패턴의 한계
+* **싱글톤 패턴의 한계**
   * private 생성자를 갖고 있기 때문에 상속할 수 없다
   * 싱글톤은 테스트하기가 힘들다
   * 서버환경에서는 싱글톤이 하나만 만들어지는 것을 보장하지 못한다.
   * 싱글톤의 사용은 전역 상태를 만들 수 있기 때문에 바람직하지 못하다.
-* 싱글톤 레지스트리
+* **싱글톤 레지스트리**
   * 자바의 기본적인 싱글톤 패턴의 구현 방식은 여러 가지 단점이 있기 때문에, 스프링은 직접 싱글톤 형태의 오브젝트를 만들고 관리하는 기능을 제공한다.
     * ➡️이것이 `싱글톤 레지스트리`다.
   * 싱글톤 레지스트리의 장점은 스태틱 메서드와 private 생성자를 사용해야 하는 비정상적인 클래스가 아니라 **평범한 자바 클래스를 싱글톤으로 활용하게 해준다는 점**이다.
   * 가장 중요한 것은 싱글톤 패턴과 달리 스프링이 지지하는 객체지향적인 설계 방식과 원칙, 디자인 패턴 등을 적용하는 데 아무런 제약이 없다는 점이다.
-## 💡싱글톤과 오브젝트의 상태
+### 💡싱글톤과 오브젝트의 상태
 * 싱글톤은 멀티스레드 환경이라면 여러 스레드가 동시에 접근해서 사용할 수 있기 때문에 상태 관리에 주의를 기울여야 한다.
 * 상태가 없는 방식으로 클래스를 만드는 경우에 각 요청에 대한 정보나, DB나 서버의 리소스로부터 생성한 정보는 어떻게 다뤄야할까?
   * 이 때는 파라미터와 로컬 변수, 리턴 값들을 이용하자.
-## 💡스프링 빈의 스코프
+### 💡스프링 빈의 스코프
 * 스프링 빈의 기본 스코프는 싱글톤이다
 * 싱글톤 스코프는 컨테이너 내의 한 개의 오브젝트만 만들어져서, 강제로 제거하지 않는 한 스프링 컨테이너가 존재하는 동안 계속 유지된다.
 </br>
 
 ## 🌱 1.7 의존관계 주입(DI)
+### 💡 제어의 역전(IoC)과 의존관계 주입
+스프링이 서블릿 컨테이너처럼 서버에서 동작하는 서비스 컨테이너라는 뜻인지, 아니면 단순히 IoC 개념이 적용된 템플릿 메소드 패턴을 이용해 만들어진 프레임워크인지, 아니면 또 다른 IoC특징을 지닌 기술이라는 것인지 파악하기 힘들다.   
+그래서 `의존관계 주입`이라는 의도가 명확히 드러나는 이름을 사용하기 시작했다.
+### 💡 런타임 의존관계 설정
+* 의존관계
+  * <img src="https://github.com/syoh98/TIL/assets/76934280/49279a6e-654d-4ac3-b07d-ae95d442b8b2" width="400"/></br>
+  * A가 B에 의존하고 있는 경우, B가 변하면 A에게 영향이 전달된다
+  * 두 개의 클래스 또는 모듈이 의존관계에 있다고 말할 때는 항상 **방향성을 부여**해줘야한다.
+* UserDao의 의존관계
+  * <img src="https://github.com/syoh98/TIL/assets/76934280/7d29e40c-eef0-4587-b235-67b436d05146" width="400"/></br>
+  * UserDao는 ConnectionMaker 인터페이스에만 의존하고 있다. 따라서 ConnectionMaker 인터페이스가 변한다면 그 영향을 UserDao가 직접적으로 받게 된다.
+  * 하지만 ConnectionMaker 인터페이스를 구현한 클래스, 즉 DConnectionMaker 등이 다른 것으로 바뀌거나 그 내부에서 사용하는 메서드에 변화가 생겨도 UserDao에 영향을 주지 않는다.
+  * 인터페이스를 통해 의존관계를 제한해주면 그만큼 변경에서 자유로워진다.
+  * 의존관계 주입이란 세 가지 조건을 충족하는 작업을 말한다.
+    1. 클래스 모델이나 코드에는 런타임 시점의 의존관계가 드러나지 않는다. 그러기 위해서는 인터페이스에만 의존하고 있어야 한다.
+    2. 런타임 시점의 의존관계는 컨테이너나 팩토리 같은 제 3의 존재가 결정한다.
+    3. 의존관계는 사용할 오브젝트에 대한 레퍼런스를 외부에서 제공(주입)해줌으로써 만들어진다.
+* UserDao의 의존관계 주입
+  ```java
+  public UserDao() {
+      connectionMaker = new DConnectionMaker();
+  }
+  ```
+  * **이 코드의 문제는 이미 런타임 시의 의존관계가 코드 속에 다 미리 결정되어 있다는 점이다**
+  * ➡️ 그래서 IoC의 방식을 써서 UserDao로부터 런타임 의존관계를 드러내는 코드를 제거하고, 제 3의 존재에 런타임 의존관계 결정 권한을 위임한다. 그래서 최종적으로 만들어진 것이 DaoFactory이다.
+### 💡 의존관계 검색과 주입
+* 스프링이 제공하는 IoC 방법에는 의존관계 주입만 있는 것이 아니다. 코드에서는 구체적인 클래스에 의존하지 않고, 런타임 시에 의존관계를 결정한다는 점에서 의존관계 주빙과 비슷하지만, 의존관계를 맺는 방법이 외부로부터의 주입이 아니라 스스로 검색을 이용하기 때문에 의존관계 검색이라고 불리는 것도 있다.
+* 의존관계 검색과 의존관계 주입 방법 중 어떤 것이 더 나을까?
+  * 의존관계 주입의 방법이 훨씬 단순하고 깔끔하다.
+  * 의존관계 검색 방식에서는 검색하는 오브젝트는 자신이 스프링의 빈일 필요가 없다.
+  * 반면 의존관계 주입에서는 UserDao와 ConnectionMaker 사이에 DI가 적용되려면 UserDao도 반드시 컨테이너가 만드는 빈 오브젝트여야 한다.
+### 💡 의존관계 주입의 응용
+* 기능 구현의 교환
+* 부가기능 추가
+### 💡 메서드를 이용한 의존관계 주입
+생성자가 아닌 일반 메서드를 이용해 의존 오브젝트와의 관계를 주입해주는 두 가지 방법
+* 수정자 메서드를 이용한 주입
+  * 외부에서 오브젝트 내부의 애트리뷰트 값을 변경하려는 용도로 주로 사용된다.
+* 일반 메서드를 이용한 주입
+  * 수정자 메서드처럼 set으로 시작해야하고 한 번 에 한 개의 파라미터만 가질 수 있다는 제약이 싫을 때 여러 개의 파라미터를 갖는 일반 메서드를 DI용으로 사용할 수 있다.
+</br>
 
 ## 🌱 1.8 XML을 이용한 설정
+* 스프링의 애플리케이션 컨텍스트는 XML에 담긴 DI 정보를 활용할 수 있다.
+* XML 설정은 @Configuration과 @Bean이 붙은 자바 클래스로 만든 설정과 내용이 동일하다.
+  * @Configuration을 <beans>, @Bean을 <bean>에 대응해서 생각하자
+* 하나의 @Bean 메서드를 통해 얻을 수 있는 빈의 DI 정보는 세가지다.
+  * 빈의 이름: @Bean 메서드 이름이 빈의 이름이다. 이 이름은 getBean()에서 사용된다.
+  * 빈의 클래스: 빈 오브젝트를 어떤 클래스를 이용해서 만들지를 정의한다.
+  * 빈의 의존 오브젝트: 빈의 생성자나 수정자 메서드를 통해 의존 오브젝트를 넣어준다.
+### 💡 connectionMaker() 전환
+| |자바 코드 설정정보|XML 설정정보|
+|---|---|---|
+|빈 설정파일|@Configuration|< beans >|
+|빈의 이름|@Bean methodName()|<bean id="methodName"|
+|빈의 클래스|return new BeanClass();|class="a.b.c... BeanClass"|
+</br>
 
 ## 🌱 1.9 정리
+앞의 과정을 정리해보자
+* 책임이 다른 코드를 분리해서 두 개의 클래스로 만들었다(관심사의 분리, 리팩토링)
+* 그 중에서 바뀔 수 있는 쪽의 클래스는 인터페이스를 구현하도록 하고, 다른 클래스에서 인터페이스를 통해서만 접근하도록 만들었다. 이렇게 해서 인터페이스를 정의한 쪽의 구현 방법이 달라져 클래스가 바뀌더라도, 그 기능을 사용하는 클래스의 코드는 같이 수정할 필요가 없도록 만들었다(전략패턴)
+* 이를 통해 자신의 책임 자체가 변경되는 경우 외에는 불필요한 변화가 발생하지 않도록 막아주고, 자신이 사용하는 외부 오브젝트의 기능은 자유롭게 확장하거나 변경할 수 있게 만들었다(개방 폐쇄 원칙)
+* 결국 한쪽의 기능 변화가 다른 쪽의 변경을 요구하지 않아도 되게 했고(낮은 결합도), 자신의 책임과 관심사에만 순수하게 집중하는(높은 응집도) 깔끔한 코드를 만들 수 있었다.
+* 오브젝트가 생성되고 여타 오브젝트와 관계를 맺는 작업의 제어권을 별도의 오브젝트 팩토리를 만들어 넘겼다. 또는 오브젝트 팩토리의 기능을 일반화한 IoC 컨테이너로 넘겨서 오브젝트가 자신이 사용할 대상의 생성이나 선택에 관한 책임으로부터 자유롭게 만들어줬다(제어의 역전/IoC)
+* 전통적인 싱글톤 패턴 구현 방식의 단점을 살펴보고, 서버에서 사용되는 서비스 오브젝트로서의 장점을 살릴 수 있는 싱글톤을 사용하면서도 싱글톤 패턴의 단점을 극복할 수 있도록 설계된 컨테이너를 활용하는 방법에 대해 알아봤다(싱글톤 레지스트리)
+* 설계 시점과 코드에는 클래스와 인터페이스 사이의 느슨한 의존관계만 만들어놓고, 런타임 시에 실제 사용할 구체적인 의존 오브젝트를 제 3자(DI 컨테이너)의 도움으로 주입받아서 다이내믹한 의존관계를 갖게 해주는 IoC의 특별한 케이스를 알아봤다(의존관계 주입/DI)
+* 의존 오브젝트를 주입할 때 생성자를 이용하는 방법과 수정자 메서드를 이용하는 방법을 알아봤다(생성자 주입과 수정자 주입)
+* 마지막으로, XML을 이용해 DI 설정정보를 만드는 방법과 의존 오브젝트가 아닌 일반 값을 외부에서 설정해서 런타임 시에 주입하는 방법을 알아봤다(XML 설정)
