--- a/토비의 스프링 3.1/02_테스트.md
+++ b/토비의 스프링 3.1/02_테스트.md
@@ -108,6 +108,56 @@ if(!user.getName().equals(user2.getName())) {
 </br>
 
 ## 🌱 2.4 스프링 테스트 적용
+### 💡 테스트를 위한 애플리케이션 컨텍스트 관리
+스프링은 JUnit을 이용하는 테스트 컨텍스트 프레임워크를 제공한다.   
+테스트 컨텍스트의 지원을 받으면 간단한 애노테이션 설정만으로 테스트에서 필요로 하는 애플리케이션 컨텍스트를 만들어서 모든 테스트가 공유하게 할 수 있다.
+* 스프링 테스트 컨텍스트 프레임워크 적용
+
+  ```java
+  @RunWith(SpringJUnit4ClassRunner.class)
+  @ContextConfiguration(locations="/applicationContext.xml")
+  public class UserDaoTest {
+      @Autowired
+      private ApplicationContext context;
+      // ...
+    
+      @Before
+      public void setUp() {
+          this.dao = this.context.getBean("userDao", UserDao.class);
+      }
+  }
+  ```
+  * `@RunWith(SpringJUnit4ClassRunner.class)`: 스프링의 테스트 컨텍스트 프레임워크의 JUnit 확장기능 지정
+  * `@ContextConfiguration(locations="/applicationContext.xml")`: 테스트 컨텍스트가 자동으로 만들어줄 애플리케이션 컨텍스트의 위치 지정
+  * `@Autowired`~: 테스트 오브젝트가 만들어지고 나면 스프링 테스트 컨텍스트에 의해 자동으로 값이 주입된다.
+  * ➡️ 그런데 인스턴스 변수인 context는 어디에서도 초기화해주는 코드가 없다. 따라서 setUp() 메서드에서 context를 사용하려고 하면 NullPointerException이 발생해야한다.
+  * 하지만 테스트는 아무런 문제 없이 성공적으로 끝난다. **context 변수에 애플리케이션 컨텍스트가 들어 있기 때문이다.**
+* 테스트 메서드의 컨텍스트 공유
+  * context 변수에 어떻게 애플리케이션 컨텍스트가 들어 있는 것일까?
+  * ➡️ 스프링의 JUnit 확장기능은 테스트가 실행되기 전에 딱 한 번만 애플리케이션 컨텍스트를 만들어두고, 테스트 오브젝트가 만들어질 때마다 특별한 방법을 이용해 애플리케이션 컨텍스트 자신을 테스트 오브젝트의 특정 필드에 주입해주는 것이다.
+    * ➡️ 일종의 DI라고 볼 수 있는데, 애플리케이션 오브젝트 사이의 관계를 관리하기 위한 DI와는 성격이 조금 다르다.
+    * **✏️ 결론은 하나의 테스트 클래스 내의 테스트 메서드는 같은 애플리케이션 컨텍스트를 공유해서 사용할 수 있음을 알게된 것이다!!**
+* 테스트 클래스의 컨텍스트 공유
+  * 스프링 테스트 컨텍스트 프레임워크의 기능은 하나의 테스트 클래스 안에서 애플리케이션 컨텍스트를 공유해주는 것이 전부가 아니다.
+  * **여러 개의 테스트 클래스가 있는데 모두 같은 설정파일을 가진 애플리케이션 컨텍스트를 사용한다면, 스프링은 테스트 클래스 사이에서도 애플리케이션 컨텍스트를 공유하게 해준다.**
+  * 따라서 수백 개의 테스트 클래스를 만들었는데 모두 같은 설정파일을 사용한다고 해도 테스트 전체에 걸쳐 단 한 개의 애플리케이션 컨텍스트만 만들어져 사용된다. 이 덕분에 테스트 성능이 대폭 향상된다.
+  * 스프링은 설정파일의 종류만큼 애플리케이션 컨텍스트를 만들고, 같은 설정파일을 지정한 테스트에서는 이를 공유하게 해준다.
+* `@Autowired`
+  * `@Autowired`가 붙은 인스턴스 변수가 있으면, 테스트 컨텍스트 프레임워크는 변수 타입과 일치하는 컨텍스트 내의 빈을 찾는다. 타입이 일치하는 빈이 있으면 인스턴스 변수에 주입해준다.
+  * 단, `@Autowired`는 같은 타입의 빈이 두 개 이상 있는 경우에는 타입만으로는 어떤 빈을 가져올지 결정 할 수 없다.
+  * 따라서 타입으로 가져올 빈 하나를 선택할 수 없는 경우에는 변수의 이름과 같은 이름의 빈이 있는지 확인한다. 변수 이름으로도 빈을 찾을 수 없는 경우에는 예외가 발생한다.
+### 💡 DI와 테스트 
+* DI를 이용한 테스트 방법 선택
+  * 테스트 코드에 의한 DI
+    * DI는 애플리케이션 컨텍스트 같은 스프링 컨테이너에서만 할 수 있는 작업이 아니다. 테스트 코드 내에서 이를 이용해서 직접 DI해도 된다.
+    * `@DirtiesContext`: 스프링의 테스트 컨텍스트 프레임워크에게 해당 클래스의 테스트에서 애플리케이션 컨텍스트의 상태를 변경한다는 것을 알려준다. 테스트 컨텍스트는 이 애노테이션이 붙은 테스트 클래스에는 애플리케이션 컨텍스트 공유를 허용하지 않는다.
+  * 테스트를 위한 별도의 DI 설정
+  * 컨테이너 없는 DI 테스트
+* ✏️ DI를 테스트에 이용하는 세 가지 방법 중 어떤 것을 선택해야 할까?
+  * 항상 스프링 컨테이너 없이 테스트할 수 있는 방법을 가장 우선적으로 고려하자. 이 방법이 테스트 수행 속도가 가장 빠르고 테스트 자체가 간결하다.
+  * 여러 오브젝트와 복잡한 의존관계를 갖고 있는 오브젝트를 테스트해야 할 경우에는 스프링의 설정을 이용한 DI 방식의 테스트를 이용하자.
+  * 테스트 설정을 따로 만들었다고 하더라도 때로는 예외적인 의존관계를 강제로 구성해서 테스트해야 할 경우가 있는데, 이 때는 컨텍스트에서 DI 받은 오브젝트에 다시 테스트 코드로 수동 DI해서 테스트하는 방법을 사용하자.
+</br>
 
 ## 🌱 2.5 학습 테스트로 배우는 스프링
 * 때로는 **자신이 만들지 않은 프레임워크나 다른 개발팀에서 만들어서 제공한 라이브러리 등에 대해서도 테스트를 작성**해야하는데, 이런 테스트를 `학습 테스트`라 한다.
