--- a/토비의 스프링 3.1/03_템플릿.md
+++ b/토비의 스프링 3.1/03_템플릿.md
@@ -72,8 +72,78 @@ public void deleteAll() throws SQLException {
 ![image](https://github.com/syoh98/TIL/assets/76934280/ebac587d-7dcb-4f70-bf97-939d99ada991)
 
 ## 🌱 3.3 JDBC 전략 패턴의 최적화
+### 💡 전략과 클라이언트의 동거
+* 현재 만들어진 구조에 두 가지 불만이 있다.
+  * DAO 메서드마다 새로운 StatementStrategy 구현 클래스를 만들어야 한다는 점
+  * DAO 메서드에서 StatementStrategy에 전달할 User와 같은 부가적인 정보가 있는 경우, 이를 위해 오브젝트를 전달받는 생성자와 이를 저장해둘 인스턴스 변수를 번거롭게 만들어야 한다는 점
+  * ➡️ 이 두가지 문제를 해결해보자
+* 1️⃣ 로컬 클래스
+  * StatementStrategy 전략 클래스를 매번 독립된 파일로 만들지 말고 UserDao 클래스 안에 내부 클래스로 정의해버리자.
+    * 이 방식은 클래스가 사용되는 곳이 해당 메서드에 한해서라면, 로컬 변수를 선언하듯이 선언하여 클래스 파일 생성을 줄일 수 있다.
+    * 또한 로컬클래스는 내부 클래스이기 때문에 자신이 선언된 곳의 정보에 접근할 수 있다는 장점이 있다.(=자신이 정의된 메서드의 로컬 변수에 직접 접근이 가능하다.)
+* 2️⃣ 익명 내부 클래스
+  * 익명 내부 클래스는 선언과 동시에 오브젝트를 생성한다. 이름이 없기 때문에 클래스 자신의 타입을 가질 수 없고, 구현한 인터페이스 타입의 변수에만 저장할 수 있다.
+  * `new 인터페이스이름() { 클래스 본문 };`
+</br>
+
 ## 🌱 3.4 컨텍스트와 DI
+### 💡 JdbcContext의 분리
+jdbcContextWithStatementStrategy()는 다른 DAO에서도 사용가능하므로, UserDao 클래스를 밖으로 독립시켜 모든 DAO가 사용할 수 있게 해보자.
+* 클래스 분리
+  * JdbcContext를 DI 받아서 사용하도록 만든 UserDao
+    <img src="https://github.com/syoh98/TIL/assets/76934280/1d459439-1310-4ed0-9044-958ea220b941" width="600"/></br>
+* 빈 의존관계 변경
+  * UserDao에서 JdbcContext를 DI 받을 때는 `생성자 주입`을 사용한다.
+  * 하지만 인터페이스를 사용하지 않고 클래스를 직접 DI를 적용했다.
+  * 생성자 주입을 사용하는 이유는 런타임 시에 구현체가 동적으로 선택되는 것이다.
+  * 그러나 위의 경우, 클래스 레벨부터 특정 클래스가 고정되어 있으며, 구현체의 변경이 불가능하다.
+### 💡 JdbcContext의 특별한 DI
+* ✏️ **스프링 빈으로 DI**
+  * 🤔 이렇게 인터페이스를 사용하지 않고 DI를 적용하는 것은 문제가 있지 않을까?
+    * ➡️ 꼭 그럴 필요는 없다.
+  * 의존관계 주입(DI)이라는 개념을 충실히 따르면
+    * 인터페이스를 사이에 둬서 클래스 레벨에서는 의존관계가 고정되지 않게 하고
+    * 런타임 시에 의존할 오브젝트와의 관계를 다이내믹하게 주입해주는 것이 맞다.
+    * 따라서 인터페이스를 사용하지 않았다면 엄밀히 말해서 온전한 DI는 아니다.
+    * 그러나 **스프링의 DI는 넓게 보자면 객체의 생성과 관계설정에 대한 제어권한을 `오브젝트에서 제거하고 외부로 위임했다는` IoC의 개념을 포괄한다.**
+  * **🤔 JdbcContext를 UserDao의 DI 구조로 만들어야 할 이유는?**
+    1. JdbcContext가 스프링 컨테이너의 싱글톤 레지스트리에서 관리되는 싱글톤 빈이 되기 때문이다.
+    2. JdbcContext가 DI를 통해 다른 빈에 의존하고 있기 때문이다.
+  * **그래서 인터페이스를 왜 사용안한건데!!**
+    * 인터페이스가 없다는 건 둘이 강한 응집도를 갖고 있다는 것이다. JdbcContext는 다른 구현으로 대체해서 이용할 이유가 없다.
+* ✏️ **코드를 이용하는 수동 DI**
+  * JdbcContext를 스프링의 빈으로 등록해서 UserDao에 DI 하는 대신 사용할 수 있는 방법은 **UserDao 내부에서 직접 DI를 적용하는 방법**이다.
+    * 이 방법은 JdbcContext를 스프링의 빈으로 등록해서 사용했던 첫 번째 이유인 **싱글톤으로 만들려는 것은 포기**해야 한다.(= DAO마다 하나의 JdbcContext 오브젝트를 갖고 있게 하는 것이다.)
+    * 또한 UserDao에서 JdbcContext를 직접 사용하는 경우에는 UserDao가 임시로 DI 컨테이너처럼 동작하게 만들수도 있다.(=JdbcContext를 통해 간접적으로 DataSource를 사용하는 방법)
+    ```java
+      public class UserDao {
+      ...
+      
+      	private JdbcContext jdbcContext;
+
+		public void setDataSource(DataSource dataSource) {
+          this.jdbcContext = new JdbcContext();
+          
+		  this.jdbcContext.setDataSource(dataSource); 
+          this.dataSource = dataSource;
+      }
+    ```
+    * 이 방법의 장점은 **굳이 인터페이스를 두지 않아도 될 만큼 긴밀한 관계를 갖는 DAO 클래스와 JdbcContext를 따로 빈으로 분리하지 않고 내부에서 직접 만들어 사용하면서도 다른 오브젝트에 대한 DI를 적용할 수 있다는 점**이다!
+</br>
+
 ## 🌱 3.5 템플릿과 콜백
+* 전략 패턴의 컨텍스트를 `템플릿`이라 부르고, 익명 내무 클래스로 만들어지는 오브젝트를 `콜백`이라고 부른다.
+### 💡 템플릿/콜백의 동작원리
+* 템플릿/콜백 패턴의 콜백은 보통 단일 메서드 인터페이스를 사용한다. 템플릿의 작업 흐름 중 특정 기능을 위해 한 번 호출되는 경우가 일반적이기 때문이다.
+* 콜백 인터페이스의 메서드에는 보통 파라미터가 있다. 이 파라미터는 템플릿의 작업 흐름 중에 만들어지는 컨텍스트 정보를 전달받을 때 사용된다.
+* 템플릿/콜백 패턴의 일반적인 작업 흐름   
+  ![image](https://github.com/syoh98/TIL/assets/76934280/cb0ab85d-4285-40bc-a6f9-ea3f7e7f1b8f)
+  * 클라이언트의 역할은 템플릿 안에서 실행될 로직을 담은 콜백 오브젝트를 만들고, 콜백이 참조할 정보를 제공하는 것이다. 만들어진 콜백은 클라이언트가 템플릿의 메서드를 호출할 때 파라미터로 전달된다.
+  * 템플릿은 정해진 작업 흐름을 따라 작업을 진행하다가 내부에서 생성한 참조정보를 가지고 콜백 오브젝트의 메서드를 호출한다. 콜백은 클라이언트 메서드에 있는 정보와 템플릿이 제공한 참조정보를 이용해서 작업을 수행하고 그 결과를 다시 템플릿에 돌려준다.
+  * 템플릿은 콜백이 돌려준 정보를 사용해서 작업을 마저 수행한다. 경우에 따라 최종 결과를 클라이언트에 다시 돌려주기도 한다.
+### 💡 편리한 콜백의 재활용
+### 💡 템플릿/콜백의 응용
+
 ## 🌱 3.6 스프링의 JDBCTEMPLATE
 ## 🌱 3.7 정리
 
