--- a/토비의 스프링 3.1/03_템플릿.md
+++ b/토비의 스프링 3.1/03_템플릿.md
@@ -142,8 +142,75 @@ jdbcContextWithStatementStrategy()는 다른 DAO에서도 사용가능하므로,
   * 템플릿은 정해진 작업 흐름을 따라 작업을 진행하다가 내부에서 생성한 참조정보를 가지고 콜백 오브젝트의 메서드를 호출한다. 콜백은 클라이언트 메서드에 있는 정보와 템플릿이 제공한 참조정보를 이용해서 작업을 수행하고 그 결과를 다시 템플릿에 돌려준다.
   * 템플릿은 콜백이 돌려준 정보를 사용해서 작업을 마저 수행한다. 경우에 따라 최종 결과를 클라이언트에 다시 돌려주기도 한다.
 ### 💡 편리한 콜백의 재활용
+템플릿/콜백 방식에서 한가지 아쉬운 점이 있다. DAO 메서드에서 매번 익명 내부 클래스를 사용하기 때문에 상대적으로 코드를 작성하고 읽기가 조금 불편하다.
+* **콜백의 분리와 재활용**
+  * 복잡한 익명 내부 클래스의 사용을 최소화할 수 있는 방법을 찾아보자
+  * ➡️ 중복될 가능성이 있는 자주 바뀌지 않는 부분을 분리하자
+```java
+public void deleteAll() throws SQLException {
+    this.jdbcContext.workWithStatementStrategy(
+        // 변하지 않는 콜백 클래스 정의와 오브젝트 생성
+        new StatementStrategy() {
+            public PreparedStatement makePreparedStatement(Connection c) throws SQLException {
+                return c.prepareStatement("delete from users"); // 변하는 SQL 문장
+            }
+        }
+    )
+}
+```
+```java
+public void deleteAll() throws SQLException {
+    executeSql("delete from users"); // 변하는 SQL 문장
+}
+// ------------ 분리 ------------
+private void executeSql(final String query) throws SQLException {
+    this.jdbcContext.workWithStatementStrategy(
+        // 변하지 않는 콜백 클래스 정의와 오브젝트 생성
+        new StatementStrategy() {
+            public PreparedStatement makePreparedStatement(Connection c) throws SQLException {
+                return c.prepareStatement(query);
+            }
+        }
+    )
+}
+```
+➡️ 바뀌는 부분인 SQL 문장만 파라미터로 받아서 사용하게 만들었다.   
+➡️ 재활용 가능한 콜백을 담은 메서드가 만들어졌다.
+* **콜백과 템플릿의 결합**
+  * executeSql() 메서드는 UserDao만 사용하기는 아깝다.
+    ```java
+    public class JdbcContext {
+        public void executeSql(final String query) throws SQLException {
+            workWithStatementStrategy(
+                new StatementStrategy() {
+                    public PreparedStatement makePreparedStatement(Connection c) throws SQLException {
+                        return c.prepareStatement(query);
+                    }
+                }
+            )
+        }
+    }
+    // ------------------------
+    public void deleteALl() throws SQLException {
+        this.jdbcContext.executeSql("delete from users");
+    }
+    ```
+    ➡️ 결국 JdbcContext 안에 클라이언트와 템플릿, 콜백이 모두 함께 공존하면서 동작하는 구조가 됐다.
 ### 💡 템플릿/콜백의 응용
+가장 전형적인 템플릿/콜백 패턴의 후보는 `try/catch/finally` 블록을 사용하는 코드다.
+* 테스트와 try/catch/finally
+* 중복의 제거와 템플릿/콜백 설계
+* 템플릿/콜백의 재설
 
 ## 🌱 3.6 스프링의 JDBCTEMPLATE
+스프링이 제공하는 JDBC 코드용 기본 템플릿은 JdbcTemplate이다.
+
 ## 🌱 3.7 정리
+* JDBC와 같은 예외가 발생할 가능성이 있으며 공유 리소스의 반환이 필요한 코드는 반드시 try/catch/finally 블록으로 관리해야 한다.
+* 일정한 작업 흐름이 반복되면서 그중 일부 기능만 바뀌는 코드가 존재한다면 전략 패턴을 적용한다. 바뀌지 않는 부분은 컨텍스트로, 바뀌는 부분은 전략으로 만들고 인터페이스를 통해 유연하게 전략을 변경할 수 있도록 구성한다.
+* 같은 애플리케이션 안에서 여러 가지 종류의 전략을 다이내믹하게 구성하고 사용해야 한다면 컨텍스트를 이용하는 클라이언트 메서드에서 직접 전략을 정의하고 제공하게 만든다.
+* 클라이언트 메서드 안에 익명 내부 클래스를 사용해서 전략 오브젝트를 구현하면 코드도 간결해지고 메서드의 정보를 직접 사용할 수 있어서 편리하다.
+* 컨텍스트가 하나 이상의 클라이언트 오브젝트에서 사용된다면 클래스를 분리해서 공유하도록 만든다.
+* 컨텍스트는 별도의 빈으로 등록해서 DI 받거나 클라이언트 클래스에서 직접 생성해서 사용한다. 클래스 내부에서 컨텍스트를 사용할 때 컨텍스트가 의존하는 외부의 오브젝트가 있다면 코드를 이용해서 직접 DI 해줄 수 있다.
+
 
