--- a/토비의 스프링 3.1/04_예외.md
+++ b/토비의 스프링 3.1/04_예외.md
@@ -52,3 +52,24 @@ public void deleteAll() {
 * add() 메서드의 예외처리
 * 애플리케이션 예
 ### 💡 SQLException은 어떻게 됐나?
+</br>
+
+## 🌱 4.2 예외 전환
+다시 정리하면 예외를 다른 것으로 바꿔서 던지는 예외 전환의 목적은 두 가지이다.
+* 런타임 예외로 포장해서 굳이 필요하지 않은 catch/throws를 줄여주는 것
+* 로우레벨의 예외를 좀 더 의미 있고 추상화된 예외로 바꿔서 던져주는 것
+### 💡 JDBC의 한계
+* 비표준 SQL
+* 호환성 없는 SQLException의 DB 에러정보
+### 💡 DB 에러 코드 매핑을 통한 전환
+### 💡 DAO 인터페이스와 DataAccessException 계층구조
+* DAO 인터페이스와 구현의 분리
+* 데이터 액세스 예외 추상화와 DataAccessException 계층구조
+</br>
+
+## 🌱 4.3 정리
+* 예외를 잡아서 아무런 조취를 취하지 않거나 의미 없는 throws 선언을 남발하는 것은 위험하다.
+* 예외는 복구하거나 예외처리 오브젝트로 의도적으로 전달하거나 적절한 예외로 전환해야 한다.
+* 좀 더 의미 있는 예외로 변경하거나, 불필요한 catch/throws를 피하기 위해 런타임 예외로 포장하는 두 가지 방법의 예외 전환이 있다.
+* 복구할 수 없는 예외는 가능한 한 빨리 런타임 예외로 전환하는 것이 바람직하다.
+* 애플리케이션의 로직을 담기 위한 예외는 체크 예외로 만든다.
