--- a/토비의 스프링 3.1/05_서비스 추상화.md
+++ b/토비의 스프링 3.1/05_서비스 추상화.md
@@ -35,9 +35,69 @@
     }
     ```
 * User 필드 추가
+  * 위에서 만든 Level 타입의 변수를 User 클래스에 추가하자.
 * UserDaoTest 테스트 수정
+  * UserDaoJdbc와 테스트에도 필드를 추가해주자.
+  * UserDaoTest에서 두 개의 User 오브젝트 필드 값이 모두 같은지 비교하는 checkSameUser() 메서드를 수정한다.
+    ```java
+    private void checkSameUser(User user1, User user2) {
+        assertThat(user1.getId(), is(user2.getId()));
+        assertThat(user1.getName(), is(user2.getName()));
+        assertThat(user1.getPassword(), is(user2.getPassword()));
+        assertThat(user1.getLevel(), user2.getLevel());
+        assertThat(user1.getLogin(), user2.getLogin());
+        assertThat(user1.getRecommed(), user2.getRecommed());
+    }
+    ```
+    * ➡️ 앞으로 추가되거나 변경돼도 User 오브젝트를 비교하는 로직을 일정하게 유지할 수 있도록 checkSameUser()를 이용하자.
 * UserDaoJdbc 수정
+  * userMapper에 추가된 필드를 넣어주자.
 ### 💡 사용자 기능 추가
+사용자 관리 비즈니스 로직에 따르면 사용자 정보는 여러 번 수정될 수 있다.   
+기본키인 id를 제외한 나머지 필드는 수정될 가능성이 있다.
+* 수정 기능 테스트 추가, 수정 테스트 보완
+  ```java
+  @Test
+  private void update) {
+      dao.deleteAll();
+      dao.add(User1);
+
+      // 픽스처에 들어 있는 정보를 변경해서 수정 메서드를 호출한다.
+      user1.setName("오소영");
+      user1.setPassword("springbom");
+      // ....
+
+      User user1update = dao.get(user1.getId());
+     checkSameUser(user1, user1update);
+  }
+  ```
+  * JDBC 개발에서 리소스 반환과 같은 기본 작업을 제외하면 가장 많은 실수가 일어나는 곳은 **SQL 문장**이다.
+  * 위와 같이 UPDATE 문장에서 WHERE절을 빼먹는 경우, 아무런 경고 없이 정상적으로 동작하는 것처럼 보이기 때문에 이 문제를 해결해야한다.
+  * 해결방법
+    1. JDBCTemplate의 `update()`가 돌려주는 리턴 값을 확인하는 것
+    2. 테스트를 보강해서 원하는 사용자 외의 정보는 변경되지 않았음을 직접 확인하는 것
+    * 2번의 방법으로 해결한 테스트 코드
+        ```java
+        @Test
+        private void update) {
+            dao.deleteAll();
+        
+            dao.add(User1); // 수정할 사용자
+            dao.add(User2); // 수정하지 않을 사용자
+      
+            user1.setName("오소영");
+            user1.setPassword("springbom");
+            // ....
+
+            dao.update(user1);
+      
+            User user1update = dao.get(user1.getId());
+            checkSameUser(user1, user1update)
+
+            User user2same = dao.get(user2.getId());
+            checkSameUser(user2, user2same);
+        }
+        ```
 ### 💡 UserService.upgradeLevels()
 ### 💡 UserService.add()
 ### 💡 코드 개선
