--- a/토비의 스프링 3.1/05_서비스 추상화.md
+++ b/토비의 스프링 3.1/05_서비스 추상화.md
@@ -99,8 +99,18 @@
         }
         ```
 ### 💡 UserService.upgradeLevels()
-### 💡 UserService.add()
+![image](https://github.com/syoh98/TIL/assets/76934280/c4a703f0-b7a9-4db8-a690-de5eea11949b)
+* 레벨 관리 기능을 구현하기 위한 사용자 관리 비즈니스 로직을 담을 클래스를 추가하자.
+* UserService가 UserDao의 구현 클래스가 바뀌어도 영향받지 않도록 DI를 적용하자.
+* 테스트 클래스도 추가하자.
 ### 💡 코드 개선
+* 작성된 코드를 살펴볼 때는 다음과 같은 질문을 해볼 필요가 있다.
+  * 코드에 중복된 부분은 없는가?
+  * 코드가 무엇을 하는 것인지 이해하기 불편하지 않은가?
+  * 코드가 자신이 있어야 할 자리에 있는가?
+  * 앞으로 변경이 일어난다면 어떤 것이 있을 수 있고, 그 변화에 쉽게 대응할 수 있게 작성되어 있는가?
+* upgradeLevels() 메서드 코드의 문제점
+* upgradeLevels() 리팩토링
 </br>
 
 ## 🌱 5.2 트랜잭션 서비스 추상화
