05_서비스 추상화

--- a/토비의 스프링 3.1/05_서비스 추상화.md
+++ b/토비의 스프링 3.1/05_서비스 추상화.md
@@ -196,19 +196,69 @@ DB는 그 자체로 완벽한 트랜잭션을 지원하나, 여러 개의 SQL이
   * ➡️ **`로컬 트랜잭션`은 하나의 DB connection에 종속되기 때문**이다.
   * ➡️ 따라서 각 DB와 독립적으로 만들어지는 Connection을 통해서가 아니라, 별도의 트랜잭션 관리자를 통해 트랜잭션을 관리하는 `글로벌 트랜잭션` 방식을 사용해야한다.
   * `JTA(Java Transaction API)`를 이용해 트랜잭션 매니저를 활용하면 여러 개의 DB나 메시징 서버에 대한 작업을 하나의 트랜잭션으로 통합하는 `분산 트랜잭션` 또는 `글로벌 트랜잭션`이 가능해진다.
+  * 하지만, JDBC 로컬 트랜잭션을 JTA를 이용하는 글로벌 트랜잭션으로 바꾸려면 **UserService의 코드를 수정해야 한다는 문제가 생긴다.**
+    * ➡️ 로컬 트랜잭션 사용이 충분한 고객을 위해서는 JDBC를 이용한 트랜잭션 관리 코드를, 다중 DB를 위한 글로벌 트랜잭션을 필요로 하는 곳을 위해서는 JTA를 이용한 트랜잭션 관리 코드를 적용해야 한다는 문제
+    * ➡️ UserService는 자신의 로직이 바뀌지 않았음에도 기술활경에 따라서 코드가 바뀌는 코드가 되어버렸다!
+ * 트랜잭션 API의 의존관계 문제와 해결책
+   * `하이버네이트`를 이용한 트랜잭션 관리 코드는 JDBC나 JTA의 코드와는 또 다르다. (하이버네이트는 Connection을 직접 사용하지 않고 Session을 사용하고, 독자적인 트랜잭션 관리 API를 사용한다.)
+   * ➡️ 이 경우 UserService를 하이버네이트의 Session과 Transaction 오브젝트를 사용하는 트랜잭션 경계설정 코드로 변경할 수 밖에 없다.
+   * UserService의 코드가 특정 트랜잭션 방법에 의존적이지 않고 독립적일 수 있게 만들려면 어떻게 해야 할까? `추상화` 
+ * 스프링의 트랜잭션 서비스 추상화
+   * 스프링은 트랜잭션 기술의 공통점을 담은 트랜잭션 추상화 기술을 제공하고 있다. 이를 이용하면 애플리케이션에서 직접 각 기술의 트랜잭션 API를 이용하지 않고도, 일관된 방식으로 트랜잭션을 제어하는 트랜잭션 경계설정 작업이 가능해진다.
+   * 스프링의 트랜잭션 추상화 계층   
+     <img src="https://github.com/syoh98/TIL/assets/76934280/3cde74de-2ace-44a1-b607-a717083dcbaa" width="600"/></br>
+   * `PlatformTransactionManager`: 스프링이 제공하는 트랜잭션 경계설정을 위한 추상 인터페이스
+     * PlatformTransactionManager를 구현한 `DataSourceTransactionManager`: **JDBC의 로컬 트랜잭션을 이용**할 경우
+ * 트랜잭션 기술 설정의 분리
+   * PlatformTransactionManager를 구현한 `JTATransactionManager`: **JTA를 이용한 글로벌 트랜잭션을 이용**할 경우
+     * ✏️ `JTATransactionManager`: 주요 자바 서버에서 제공하는 JTA 정보를 JNDI를 통해 자동으로 인식하는 기능을 갖고 있다.
 </br>
 
 ## 🌱 5.3 서비스 추상화와 단일 책임 원칙
 * 수직, 수평 계층구조와 의존관계
+  * 트랜잭션을 추상화한 것처럼 기술과 서비스에 대한 추상화 기법을 이용하면 특정 기술환경에 종속되지 않는 포터블한 코드를 만들 수 있다.
+  * 같은 애플리케이션 로직을 담은 코드지만 내용에 따라 분리한 것으로 **같은 계층에서 수평적인 분리**라고 볼 수 있다.
 * 단일 책임 원칙
+  * `단일 책임 원칙`: 하나의 모듈은 한 가지 책임을 가져야 한다는 원칙
+  * UserService는 `어떻게 사용자 레벨을 관리할 것인가`와 `어떻게 트랜잭션을 관리할 것인가`라는 두가지 책임을 갖고 있었기 때문에 문제가 됐었던 것이다.
+  * 단일 책임 원칙은 서비스의 규모가 커졌을 때 장점이 두드러진다. ➡️ 수정하는 작업량, 코드 수정 작업에서의 실수 확률, 치명적인 버그...
+  * 그래서 적절하게 책임과 관심이 다른 코드를 분리하고, 서로 영향을 주지 않도록 다양한 추상화 기법을 도입하고, 애플리케이션 로직과 기술/환경을 분리하는 등의 작업은 갈수록 복잡해지는 엔터프라이즈 애플리케이션에서는 반드시 필요하다.
+    * ➡️ 이를 위한 핵심적인 도구가 바로 스프링이 제공하는 `DI`! 
 * 단일 책임 원칙의 장점
+  * 단일 책임 원칙을 잘 지키면, 어떤 변경이 필요할 때 수정 대상이 명확해진다.
 </br>
 
 ## 🌱 5.4 메일 서비스 추상화
-### 💡 JavaMail을 이용한 메일 발송 기능
+레벨이 업그레이드되는 사용자에게는 안내 메일을 발송해달라는 새로운 요청사항.
+1. 사용자의 이메일 정보를 관리해야 하는 일
+2. 업그레이드 작업을 담은 UserService의 `upgradeLevel()` 메서드에 메일 발송 기능을 추가하는 것
 ### 💡 JavaMail이 포함된 코드의 테스트
+메일 서버가 준비되어 있지 않다면 어떻게 될 것인가?
+* JavaMail은 자바의 표준 기술이고 이미 수많은 시스템에 사용돼서 검증된 안정적인 모듈이다.
+* 따라서 JavaMail API를 통해 요청이 들어간다는 보장만 있으면 굳이 테스트 할 때마다 JavaMail을 직접 구동시킬 필요가 없다. 게다가 JavaMail이 동작하면 외부의 메일 서버와 네트워크로 연동하고 전송하는 부하가 큰 작업이 일어나기 때문에 이를 생략할 수 있다면 좋을 것이다.
 ### 💡 테스트를 위한 서비스 추상화
+실제 메일 전송을 수행하는 JavaMail 대신에 테스트에서 사용할, JavaMail과 같은 인터페이스를 갖는 오브젝트를 만들어서 사용하면 문제는 해결된다.
+* JavaMail을 이용한 테스트의 문제점
+  * 그런데 JavaMail의 API는 이 방법을 적용할 수 없다는 심각한 문제가 있다.
+  * ➡️ JavaMail에 대한 추상화 기능을 이용하자.
+  * 일반적으로 서비스 추상화라고 하면 트랜잭션과 같이 기능은 유사하나 사용 방법이 다른 로우레벨의 다양한 기술에 대해 추상 인터페이스와 일관성 있는 접근 방법을 제공해주는 것을 말한다.
+  * 메일 발송작업에 트랜잭션의 개념이 빠져있어서 트랜잭션 개념을 적용해야한다. 이 문제를 해결하기 위한 방법은 두 가지이다.
+    1. 메일을 업그레이드할 사용자를 발견했을 때마다 발송하지 않고 발송 대상을 별도의 목록에 저장해두어 업그레이드 작업이 모두 성공적으로 끝났을 때 한 번에 메일을 전송하는 방법
+    2. MailSender를 확장해서 메일 전송에 트랜잭션 개념을 적용하는 방법
 ### 💡 테스트 대역
 </br>
 
 ## 🌱 5.5 정리
+* 비즈니스 로직을 담은 코드는 데이터 액세스 로직을 담은 코드와 깔끔하게 분리되는 것이 바람직하다.
+* 이를 위해서는 DAO의 기술 변화에 서비스 계층의 코드가 영향을 받지 않도록 인터페이스와 DI를 잘 활용해서 결합도를 낮춰줘야 한다.
+* DAO를 사용하는 비즈니스 로직에는 단위 작업을 보장해주는 트랜잭션이 필요하다.
+* 트랜잭션의 시작과 종료를 지정하는 일을 트랜잭션 경계설정이라고 한다. 트랜잭션 경계설정은 주로 비즈니스 로직 안에서 일어나는 경우가 많다.
+* 시작된 트랜잭션 정보를 담은 오브젝트를 파라미터로 DAO에 전달하는 방법은 매우 비효율적이기 때문에 스프링이 제공하는 트랜잭션 동기화 기법을 활용하는 것이 편리하다.
+* 자바에서 사용되는 트랜잭션 API의 종류와 방법은 다양하다. 환경과 서버에 따라서 트랜잭션 방법이 변경되면 경계설정 코드도 함께 변경돼야 한다.
+* 트랜잭션 방법에 따라 비즈니스 로직을 담은 코드가 함께 변경되면 단일 책임 원칙에 위배되며, DAO가 사용하는 특정 기술에 대해 강한 결합을 만들어낸다.
+* 트랜잭션 경계설정 코드가 비즈니스 로직 코드에 영향을 주지 않게 하려면 스프링이 제공하는 트랜잭션 서비스 추상화를 이용하면 된다.
+* 서비스 추상화는 로우레벨의 트랜잭션 기술과 API의 변화에 상관없이 일관된 API를 가진 추상화 계층을 도입한다.
+* 서비스 추상화는 테스트하기 어려운 JavaMail 같은 기술에도 적용할 수 있다. 테스트를 편리하게 작성하도록 도와주는 것만으로도 서비스 추상화는 가치가 있다.
+* 테스트 대상이 사용하는 의존 오브젝트를 대체할 수 있도록 만든 오브젝트를 테스트 대역이라 한다.
+* 테스트 대역은 테스트 대상 오브젝트가 원활하게 동작할 수 있도록 도우면서 테스트를 위해 간접적인 정보를 제공해주기도 한다.
+* 테스트 대역 중에서 테스트 대상으로부터 전달받은 정보를 검증할 수 있도록 설계된 것을 목 오브젝트라고 한다. 
