--- a/토비의 스프링 3.1/04_예외.md
+++ b/토비의 스프링 3.1/04_예외.md
@@ -59,10 +59,35 @@ public void deleteAll() {
 * 런타임 예외로 포장해서 굳이 필요하지 않은 catch/throws를 줄여주는 것
 * 로우레벨의 예외를 좀 더 의미 있고 추상화된 예외로 바꿔서 던져주는 것
 ### 💡 JDBC의 한계
-* 비표준 SQL
-* 호환성 없는 SQLException의 DB 에러정보
+DB 종류에 상관없이 사용할 수 있는 데이터 액세스 코드를 작성하는 일은 쉽지 않다.   
+표준화된 JDBC API가 DB 프로그램 개발 방법을 학습하는 부담은 확실히 줄여주지만 DB를 자유롭게 변경해서 사용할 수 있는 유연한 코드를 보장해주지는 못한다.   
+현실적으로 DB를 자유롭게 바꾸어 사용할 수 있는 DB 프로그램을 작성하는데는 두 가지 걸림돌이 있다.
+1. **비표준 SQL**
+   * SQL은 어느정도 표준화된 언어이고 몇 가지 표준 규약이 있긴 하지만, 대부분의 DB는 표준을 따르지 않는 비표준 문법과 기능도 제공한다.(이는 곧 DAO가 특정 DB에 종속적인 코드가 되고 마는 것이다.)
+   * 해결책은 `호환 가능한 표준 SQL만 사용하는 방법`, `DB별로 별도의 DAO를 만들거나 SQL을 외부에 독립시켜 DB에 따라 변경해 사용하는 방법`이 존재한다.
+2. **호환성 없는 SQLException의 DB 에러정보**
+   * DB를 사용하다가 발생할 수 있는 예외의 원인은 다양한데, **에러의 종류와 원인도 제각각**이라는 점이 문제다!
+   * 그래서 JDBC는 데이터 처리 중에 발생하는 다양한 예외를 그냥 SQLException 하나에 모두 담아버리는데, SQLException의 `getErrorCode()`로 가져올 수 있는 DB 에러 코드는 DB 별로 모두 다르다.(DB 벤더가 정의한 고유한 에러 코드를 사용하기 때문이다.)
 ### 💡 DB 에러 코드 매핑을 통한 전환
+* DB 종류가 바뀌더라도 DAO를 수정하지 않으려면 위의 두 가지 문제를 해결해야 한다.   
+* 해결 방법은 DB별 에러 코드를 참고해서 발생한 예외의 원인이 무엇인지 해석해주는 기능을 만드는 것이다.   
+* 예를 들어 키 값이 중복돼서 중복 오류가 발생하는 경우 `MySQL`이라면 1062, `오라클`이라면 1, `DB2`라면 -803이라는 에러코드를 받게된다. 이런 에러 코드 값을 확인할 수 있다면 키 중복 때문에 발생하는 SQLException을 DuplicateKeyException이라는 의미가 분명히 드러나는 예외로 전환할 수 있다.   
+  * ➡️ **DB 종류에 상관없이 동일한 환경에서 일관된 예외를 전달받을 수 있다면 효과적인 대응이 가능하다.**
+* 따라서 스프링은 DB별 에러 코드를 분류해서 스프링이 정의한 예외 클래스와 매핑해놓은 에러 코드 매핑정보 케이블을 만들어두고 이를 이용한다.
+  * example
+    ```
+    <bean id="Oracle" class="org.springframework.jdbc.support.SQLErrorCodes">
+        <property name="badSqlGrammarCodes">
+            <value>900,903,904,917,936,942</value>
+        </property>
+    ...
+    ```
 ### 💡 DAO 인터페이스와 DataAccessException 계층구조
+`DataAccessException`은 JDBC의 SQLException을 전환하는 용도로만 만들어진 것은 아니다. JDBC 외의 자바 데이터 액세스 기술에서 발생하는 예외에도 적용된다.   
+자바에서는 JDBC 외에도 데이터 액세스를 위한 표준 기술이 존재한다. JDO, JPA, iBatis...   
+`DataAccessException`은 의미가 같은 예외라면 데이터 액세스 기술의 종류가 상관없이 일관된 예외가 발생하도록 만들어 준다.   
+데이터 액세스 기술에 **독립적인 추상화된 예외를 제공**하는 것이다.   
+**스프링이 왜 이렇게 DataAccessException 계층구조를 이용해 기술에 독립적인 예외를 정의하고 사용하게 할까?**
 * DAO 인터페이스와 구현의 분리
 * 데이터 액세스 예외 추상화와 DataAccessException 계층구조
 </br>
@@ -73,3 +98,7 @@ public void deleteAll() {
 * 좀 더 의미 있는 예외로 변경하거나, 불필요한 catch/throws를 피하기 위해 런타임 예외로 포장하는 두 가지 방법의 예외 전환이 있다.
 * 복구할 수 없는 예외는 가능한 한 빨리 런타임 예외로 전환하는 것이 바람직하다.
 * 애플리케이션의 로직을 담기 위한 예외는 체크 예외로 만든다.
+* JDBC의 SQLException은 대부분 복구할 수 없는 예외이므로 런타임 예외로 포장해야 한다.
+* SQLException의 에러코드는 DB에 종속되기 때문에 DB에 독립적인 예외로 전환될 필요가 있다.
+* 스프링은 DataAccessException을 통해 DB에 독립적으로 적용 가능한 추상화된 런타임 예외 계층을 제공한다.
+* DAO를 데이터 액세스 기술에서 독립시키려면 인터페이스 도입과 런타임 예외 전환, 기술에 독립적인 추상화된 예외로 전환이 필요하다.
