동시성 이슈

--- a/동시성 이슈.md
+++ b/동시성 이슈.md
@@ -69,9 +69,9 @@ synchronized의 임계영역은 프로그램의 성능을 좌우하기 때문에
   Atomic변수는 CAS(Compare and swap) 알고리즘을 사용하여 멀티 스레드 환경에서 원자성을 보장한다.
   **CAS 알고리즘**은 값을 변경하는 시점에 스레드가 알고있는 `Stock.views` 값과 메모리 상의 `Stock.views` 값을 비교하여 일치하면 동작을 그대로 진행시키고, 다르다면 동작을 재수행하는 알고리즘이다.
 * **ConcurrentHashMap**
-  * ConcurrentHashMap의 `get()` 메서드
+  * ConcurrentHashMap의 `get()` 메서드   
     <img src="https://github.com/syoh98/TIL/assets/76934280/8e100f6d-3151-4d82-8ad4-085aaf6d93a5" width="600"/></br>
-  * ConcurrentHashMap의 `put()` 메서드
+  * ConcurrentHashMap의 `put()` 메서드   
     <img src="https://github.com/syoh98/TIL/assets/76934280/c0310366-1754-4f66-9a70-deb20fb278a8" width="600"/></br>
   ➡️ `get()` 메서드는 synchronized가 존재하지 않는 반면, `put()` 메서드에서는 부분적으로 synchronized가 존재한다.   
   이처럼 ConcurrentHashMap은 모든 버킷에 락을 거는 것이 아닌, 접근하는 버킷에 대해서만 락을거는 **Lock Striping** 기법을 사용한다.
@@ -79,11 +79,24 @@ synchronized의 임계영역은 프로그램의 성능을 좌우하기 때문에
 ### 불변객체(Immutable Object)
 불변객체는 `String`, `Integer`와 같이 객체 생성 후, **해당 객체의 내부상태가 변하지 않는 객체**를 의미한다.
 불변객체의 기본 규칙은 `final`을 사용하고 `setter`를 사용하지 않는 것으로, lock을 걸 필요가 없다.   
+
+➡️ **이러한 방법들은 단일 서버의 동시성 이슈만 해결할 수 있다. (=다중 서버에서는 해결할 수 없다.)**   
 </br>
 
-## 2️⃣ DB 레벨 동시성
-### 낙관적락
-### 비관적락
+## 2️⃣ 다중 서버에서의 동시성 이슈 해결
+## 분산락
+**여러 서버에서 동일 자원에 접근하는 경우**, 동시에 한개의 프로세스(스레드)만 접근 가능하도록 사용하는 Lock이다.
+## ✔️ 분산락 구현 방법(DBMS)
+* **낙관적락(Optimistic Lock)**
+  * 트랜잭션 대부분은 충돌하지 않을 것이라고 낙관적으로 가정하는 방법이다.
+* **비관적락(Pessimistic Lock)**
+  * 트랜잭션 충돌이 발생할 것이라고 비관적으로 가정하는 방법이다.
+* **Named Lock(MySQL USER-LEVEL LOCK)**
+
+## ✔️ 분산락 구현 방법(Redis)
+* Redis
+  * Lettuce
+  * Redisson
 </br>
 참고
 https://cookie-dev.tistory.com/29
