동시성 이슈

--- a/동시성 이슈.md
+++ b/동시성 이슈.md
@@ -28,7 +28,7 @@
 Race Condition이 발생한 원인을 보면, 스레드가 `increaseViews()` 메서드를 수행하고 있는데 다른 스레드에게 제어권이 넘어갔기 때문이다.   
 이러한 문제를 방지하기 위해 **하나의 스레드가 특정 작업을 끝내기 전까지 다른 스레드에 영향을 받지 않도록 도와주는 장치**가 있는데, 바로 `lock`이다.
 
-## 1️⃣ 코드레벨 동시성(자바 어플리케이션 내부 메모리)
+## 1️⃣ 코드레벨 동시성이슈 해결(메모리 안에서 제어)
 ### Synchronized
 자바는 `synchronized` 키워드를 사용하여 해당 메서드를 **임계영역**으로 설정할 수 있다.   
 **임계영역이**란 공유 데이터를 사용하는 코드 영역을 의미하며, **lock을 획득한 단 하나의 스레드만 임계영역에 진입할 수 있다.**
@@ -83,20 +83,72 @@ synchronized의 임계영역은 프로그램의 성능을 좌우하기 때문에
 ➡️ **이러한 방법들은 단일 서버의 동시성 이슈만 해결할 수 있다. (=다중 서버에서는 해결할 수 없다.)**   
 </br>
 
-## 2️⃣ 다중 서버에서의 동시성 이슈 해결
+## 2️⃣ 다중 서버에서의 동시성 이슈 해결(외부자원 제어)
 ## 분산락
 **여러 서버에서 동일 자원에 접근하는 경우**, 동시에 한개의 프로세스(스레드)만 접근 가능하도록 사용하는 Lock이다.
 ## ✔️ 분산락 구현 방법(DBMS)
 * **낙관적락(Optimistic Lock)**
-  * 트랜잭션 대부분은 충돌하지 않을 것이라고 낙관적으로 가정하는 방법이다.
+  * **트랜잭션 대부분은 충돌하지 않을 것**이라고 낙관적으로 가정하는 방법이다.
+  * 실제 Lock을 사용하지 않고, **버전**을 통해 데이터의 정합성을 맞춘다. (= 데이터를 읽을 때 Lock을 사용하지 않고, update 시 내가 읽은 버전이 맞는지 충돌 여부를 확인하여 처리한다.)
 * **비관적락(Pessimistic Lock)**
-  * 트랜잭션 충돌이 발생할 것이라고 비관적으로 가정하는 방법이다.
-* **Named Lock(MySQL USER-LEVEL LOCK)**
-
+  * **트랜잭션 충돌이 발생할 것**이라고 비관적으로 가정하는 방법이다.
+  * 실제 데이터에 Lock을 걸어서 데이터의 정합성을 맞춘다.
+  * 데드락의 위험성이 존재한다.
+* **Named Lock(MySQL USER-LEVEL LOCK)**   
+  <img src="https://github.com/syoh98/TIL/assets/76934280/eb63c0d5-8d81-463e-a87c-d4f22f6123fb" width="400"/></br>
+  * `GET_LOCK(str, timeout)`
+    * 입력받은 이름(str)으로 timeout 초 동안 잠금 획득을 시도한다. timeout에 음수를 입력하면 잠금을 획득할 때까지 무한대로 대기하게 된다.
+    * 한 session에서 잠금을 유지하고 있는 동안에는 다른 session에서 동일한 이름의 잠금을 획득할 수 없다.
+    * `GET_LOCK()` 의 결과 값은 1 (잠금을 획득하는데 성공 했을 때), 0 (timeout 초 동안 잠금 획득에 실패 했을 때), null (잠금획득 중 에러가 발생 했을 때, ex) Out Of Memory, 현재 스레드가 강제로 종료 됐을 때)을 반환한다.
+  * `IS_FREE_LOCK(str)`
+    * 입력한 이름(str)에 해당하는 잠금이 획득 가능한지 확인한다.
+    * 결과 값으로 1 (입력한 이름의 잠금이 없을때), 0 (입력한 이름의 잠금이 있을때), null (에러발생시, ex) 잘못된 인자) 을 반환한다.
+  * `IS_USED_LOCK(str)`
+    * 입력한 이름(str)의 잠금이 사용중인지 확인한다.
+    * 입력받은 이름의 잠금이 존재하면 connection id 를 반환하고, 없으면 null 을 반환한다.
+  * `RELEASE_ALL_LOCKS()`
+    * 현재 세션에서 유지되고 있는 모든 잠금을 해제하고 해제한 잠금 갯수를 반환한다.
+  * `RELEASE_LOCK(str)`
+    * 입력받은 이름(str) 의 잠금을 해제한다.
+    * 결과값으로 1 (잠금을 성공적으로 해제했을 때), 0 (잠금이 해제되지는 않았지만, 현재 스레드에서 획득한 잠금이 아닌 경우), null (잠금이 존재하지 않을때) 을 반환한다.   
+* ➡️ **일시적인 락에 대한 정보가 테이블에 따로 저장되어 무거워질 수 있다.**   
+**+) 레디스를 통해 분산락 구현 시, 락에 대한 정보는 휘발성이 있고 메모리에서 락을 획득하고 해제하기 때문에 상대적으로 가볍다.**
 ## ✔️ 분산락 구현 방법(Redis)
 * Redis
-  * Lettuce
-  * Redisson
+  * **Lettuce**
+    * `Setnx` 명령어를 활용하여 분산락을 구현한다.
+      * `Setnx`: Set if not Exist의 줄임말로 레디스에 특정 key 값이 존재하지 않을 경우 세팅하는 명령어
+    * **Spin Lock** 방식을 사용하여, retry 로직을 개발자가 직접 작성해야한다.
+      * **Spin Lock**: Lock을 획득하려는 스레드가 Lock을 획득할 수 있는지 확인하면서 반복적으로 시도하는 방법   
+        <img src="https://github.com/syoh98/TIL/assets/76934280/469a7611-6b2c-42f2-af61-d18b92cdf427" width="600"/></br>
+        요청이 많을수록 레디스에 많은 부하를 가하게 된다.
+      * `spring-data-redis` 의존성 추가 시 기본적으로 Lettuce 기반의 Redis Client가 제공되므로 별도의 라이브러리를 사용하지 않아도 된다.
+      * Lock의 타임아웃이 지정되어있지 않다.
+  * **Redisson**
+    * **pub-sub** 기반의 Lock 구현을 제공한다.
+      * **pub-sub 방식**: 채널을 하나 만들고 lock을 점유중인 스레드가 다음 Lock을 점유하려는 스레드에게 점유가 끝났음을 알려주면서 Lock을 주고 받는 방식이다.
+        <img src="https://github.com/syoh98/TIL/assets/76934280/82c73cf0-431c-41c9-9d00-ce689439f6ec" width="600"/></br>
+    * Spin Lock 방식을 사용하지 않으므로 별도의 Retry 로직을 작성하지 않아도 된다.
+    * Redisson에 대한 추가적인 의존성을 설정해주어야 한다.
+    * Lock의 타임아웃이 구현되어 있다.
+      ```java
+      // RedissonLock의 tryLock 메소드 시그니쳐
+      public boolean tryLock(long waitTime, long leaseTime, TimeUnit unit) throws InterruptedException
+      ```
+      * waitTime: 락 획득을 대기할 타임아웃   
+      * leaseTime: 락이 만료되는 시간
+* ✏️ **Lettuce와 Redission을 둘 다 사용하여 동시성 이슈를 해결하기도 한다.** (재시도가 필요하지 않은 Lock은 Lettuce를 사용, 재시도가 필요한 Lock은 Redission을 사용)   
+
+## ✏️ 결론
+동시성 이슈를 해결하기 위해서는 아래 3가지 중 하나라도 없애면 된다.   
+1. **동일한 공유 자원**
+2. **두 가지 이상의 스레드가 동시에 접근**
+3. **상태를 변경하는 행위**    
+   
 </br>
-참고
-https://cookie-dev.tistory.com/29
+
+참고   
+* https://cookie-dev.tistory.com/29
+* https://ttl-blog.tistory.com/1568?category=906282
+* https://techblog.woowahan.com/2631/
+* https://hyperconnect.github.io/2019/11/15/redis-distributed-lock-1.html
