07_스프링 핵심 기술의 응용

--- a/토비의 스프링 3.1/07_스프링 핵심 기술의 응용.md
+++ b/토비의 스프링 3.1/07_스프링 핵심 기술의 응용.md
@@ -58,6 +58,69 @@ SQL을 DAO에서 분리해보자.
 </br>
 
 ## 🌱7.2 인터페이스의 분리와 자기참조 빈
+### 💡 XML 파일 매핑
+* **JAXB(Java Architecture for XML Binding)**: XML에 담긴 정보를 파일에서 읽어오는 방법
+  * DOM과 같은 전통적이 XML API와 비교했을 때 JAXB의 장점은 XML 문서정보를 거의 동일한 구조의 오브젝트로 직접 매핑해준다는 것이다.
+    * DOM은 XML 정보를 자바의 리플렉션 API를 사용해서 오브젝트를 조작하는 것처럼 간접적으로 접근해야 하는 불편이 있다.
+    * 그에 비해 JAXB는 XML의 정보를 그대로 담고 있는 오브젝트 트리 구조로 만들어주기 때문에 XML 정보를 오브젝트처럼 다를 수 있어 편리하다.
+* **언마샬링**
+  * 언마샬링(unmarshalling): XML 문서를 읽어서 자바의 오브젝트로 변환하는 것
+  * 마샬링(marshalling): 바인딩 오브젝트를 XML 문서로 변환하는 것
+  * 자바오브젝트를 바이트 스트림으로 바꾸는 걸 직렬화라고 부르는 것과 비슷하다.
+### 💡 XML 파일을 이용하는 SQL 서비스
+* XML SQL 서비스
+  * 언제 JAXB를 사용해 XML 문서를 가져올지 생각해봐야 한다. DAO가 SQL을 요청할 때마다 매번 XML 파일을 다시 읽어서 SQL을 찾는 건 너무 비효율적인 방법이다.
+  * 특별한 이유가 없는 한 XML 파일은 한 번만 읽도록 해야 한다. XML 파일로부터 읽은 내용은 어딘가에 저장해두고 DAO에서 요청이 올 때 사용해야 한다.
+  * 일단은 간단히 생성자에서 SQL을 읽어와 내부에 저장해두는 초기 작업을 해보자
+    * 생성자 초기화 방법을 사용하는 XmlSqlService 클래스
+    ```java
+    public class XmlSqlService implments SqlService {
+        private Map<String, String> sqlMap = new HashMap<String, String>(); // 읽어온 SQL을 저장해둘 맵
+
+        // 스프링이 오브젝트를 만드는 시점에서 SQL을 읽어오도록 생성자를 이용한다.
+        public XmlSqlService() { // JAXB API를 이용해 XML 문서를 오브젝트 트리로 읽어온다.
+            String contextPath = Sqlmap.class.getPackage().getName();
+            try {
+                JAXBContext context = JAXBContext.newInstance(contextPath);
+                Unmarshaller unmarshaller = context.createUnmarshaller();
+                InputStream is = UserDao.class.getResourceAsStream("sqlmap.xml"); // UserDao와 같은 클래스패스의 sqlmap.xml 파일을 변환한다.
+                Sqlmap sqlmap = (Sqlmap)unmarshaller.unmarshal(is);
+
+                // 읽어온 SQL을 맵으로 저장해둔다.
+                for(SqlType sql:sqlmap.getSql()) {
+                    sqlMap.put(sql.getKey(), sql.getValue());
+                }
+            } catch(JAXBException e) {
+                throw new RuntimeException(e);
+            }
+        }
+    }
+    ```   
+    **➡️ SQL 문장을 스프링의 빈 설정에서 완벽하게 분리했다. DAO 로직이나 파라미터가 바뀌지 않는 한 SQL 내용을 변경하더라도 애플리케이션의 코드나 DI 설정은 전혀 수정할 필요가 없어졌다.**
+### 💡 빈의 초기화 작업
+위 코드에서 몇 가지 개선했으면 하는 점이 보인다.
+1. 생성자에서 예외가 발생할 수도 있는 복잡한 초기화 작업을 다루는 것은 좋지 않다.
+2. 읽어들일 파일의 위치와 이름이 코드에 고정되어 있다는 점
+* **따라서 생성자 대신 초기화 메서드를 사용하자**
+* ➡️ 그런데 이 초기화 메서드는 언제 실행돼야하고, 어떻게 실행시키지?
+  * `@PostConstruct`: java.lang.annotation 패키지에 포함된 공통 어노테이션의 한 가지. 빈 오브젝트의 초기화 메서드를 지정하는 데 사용한다.**생성자와는 달리 프로퍼티까지 모두 준비된 후에 실행된다는 면에서 매우 유용하다.**
+### 💡 변화를 위한 준비: 인터페이스 분리
+현재 `XmlSqlService`는 특정 포맷의 XML에서 SQL 데이터를 가져오고, 이를 HashMap 타입의 맵 오브젝트에 저장해둔다.   
+**SQL을 가져오는 방법에 있어서는 특정 기술에 고정되어 있다.**
+* XML 대신 다른 포맷의 파일에서 SQL을 읽어오게 한다면?
+* 가져온 SQL 정보를 HashMap 타입 컬렉션이 아닌 다른 방식으로 저장해두고 검색해서 데이터를 가져오려면?
+➡️ **코드를 고쳐야 한다. 서로 관심이 다른 코드들을 분리하고, 서로 코드에 영향을 주지 않으면서 유연하게 확장 가능하도록 DI를 적용해보자.**
+* **책임에 따른 인터페이스 정의**   
+  가장 먼저 할 일은 분리 가능한 관심사를 구분하는 것. 독입적으로 변경 가능한 두 가지 책임을 뽑아보자.
+  1. SQL 정보를 외부의 리소스로부터 읽어오는 것
+  2. 읽어온 SQL을 보관해두고 있다가 필요할 때 제공해주는 것
+  * SqlService 서비스 오브젝트의 구조를 변경하자.   
+    <img src="https://github.com/syoh98/TIL/assets/76934280/a3beaf30-7e88-45ea-b4c7-784738b7920a" width="600"/></br>
+  * 인터페이스 정의 전 생각해볼 사항은 SQLReader가 읽어오는 SQL 정보는 다시 SqlRegistry에 전달해서 등록되게 해야한다는 것이다.
+  * SqlService가 일단 SqlReader에게서 정보를 전달받은 뒤, SqlRegistry에 다시 전달해줘야 할 필요는 없다.
+  * SqlReader에게 SqlRegistry 전략을 제공해주면서 이를 이용해 SQL 정보를 SqlRegistry에 저장하라고 요청하는 편이 낫다.
+    * ➡️ `sqlReader.readSql(sqlRegistry); // SQL을 저장할 대상인 sqlRegistry 오브젝트를 전달한다.`   
+    <img src="https://github.com/syoh98/TIL/assets/76934280/22d5352e-9c98-425f-a209-55a1bcc50305" width="400"/></br>
 </br>
 
 ## 🌱7.3 서비스 추상화 적용
