07_스프링 핵심 기술의 응용

--- a/토비의 스프링 3.1/07_스프링 핵심 기술의 응용.md
+++ b/토비의 스프링 3.1/07_스프링 핵심 기술의 응용.md
@@ -124,6 +124,25 @@ SQL을 DAO에서 분리해보자.
 </br>
 
 ## 🌱7.3 서비스 추상화 적용
+JaxbXmlReader를 좀 더 개선하고 발전시켜보자
+* 자바에는 JAXB 외에도 다양한 XML과 자바오브젝트를 매핑하는 기술이 있다. 필요에 따라 다른 기술로 손쉰게 바꿔서 사용할 수 있게 해야 한다.
+* XML 파일을 좀 더 다양한 소스에서 가져올 수 있게 만든다. 현재는 UserDao 클래스와 같은 클래스 패스 안에서만 XML을 읽어올 수 있다. 이것을 `임의의 클래스패스`나 `파일 시스템 상의 절대위치` 또는 `HTTP 프로토콜`을 통해 원격에서 가져오도록 확장할 수는 없는가?
+### 💡 OXM 서비스 추상화
+* **OXM(Object-XML Mapping)**: XML과 자바오브젝트를 매핑해서 상호 변환해주는 기술
+  * Caster XML
+  * JiBX
+  * XmlBeans
+  * Xstream
+  * ➡️ JAXB를 포함하여 5가지 기술 모두 사용목적이 동일하다. **즉 서비스를 추상화 할 수 있다.**
+  * ➡️ 스프링은 OXM에 대해서도 서비스 추상화 기능을 제공한다. **스프링의 제공을 통해 변환을 처리하게 되면 코드 수정 없이 OXM 기술을 자유롭게 바꿔 적용할 수 있다!**
+ * **OXM 서비스 인터페이스**   
+   ![image](https://github.com/syoh98/TIL/assets/76934280/e6c6baaa-120a-465e-9364-b5f047b2d53c)
+  * XML 파일에 대한 정보를 담은 Source 타입의 오브젝트를 주면, 설정에서 지정한 OXM 기술을 이용해 자바오브젝트 트리로 환하고, 루트 오브젝트를 돌려준다.
+### 💡 OXM 서비스 추상화 적용
+SQL을 읽는 방법을 OXM으로 제한해서 사용성을 극대화해보자.
+* **멤버 클래스를 참조하는 통합 클래스**   
+  <img src="https://github.com/syoh98/TIL/assets/76934280/603c244a-fdfc-4167-84ae-b1afa71b1f15" width="600"/></br>
+
 </br>
 
 ## 🌱7.4 인터페이스 상속을 통한 안전한 기능확장
