--- a/토비의 스프링 3.1/07_스프링 핵심 기술의 응용.md
+++ b/토비의 스프링 3.1/07_스프링 핵심 기술의 응용.md
@@ -142,7 +142,19 @@ JaxbXmlReader를 좀 더 개선하고 발전시켜보자
 SQL을 읽는 방법을 OXM으로 제한해서 사용성을 극대화해보자.
 * **멤버 클래스를 참조하는 통합 클래스**   
   <img src="https://github.com/syoh98/TIL/assets/76934280/603c244a-fdfc-4167-84ae-b1afa71b1f15" width="600"/></br>
-
+  * OxmSqlReader는 private 멤버 클래스이므로 외부에서 접근하거나 사용할 수 없다. 또한 OxmSqlService는 이를 final로 선언하고 직접 오브젝트를 생성하기 때문에 OxmSqlReader를 DI 하거나 변경할 수 없다.
+  * ➡️ 두 개의 클래스를 강하게 결합하고 더 이상의 확장이나 변경을 제한해두는 이유는 무엇일까?
+  * ➡️ **OXM을 이용하는 서비스 구조로 최적화하기 위해서.** 하나의 클래스로 만들어두기 때문에 빈의 등록과 설정은 단순해지고 쉽게 사용할 수 있다.   
+  <img src="https://github.com/syoh98/TIL/assets/76934280/7bda5915-a239-4d61-91d4-2c3135b431dd" width="700"/></br>
+  * ➡️ 하나의 빈 설정으로 두 개의 오브젝트를 설정하는 구조
+### 💡리소스 추상화
+지금까지 만든 OxmSqlReader나 XmlSqlReader에는 공통적인 문제점이 있다.   
+SQL 매핑 정보가 담긴 XML 파일 이름을 프로퍼티로 외부에서 지정할 수는 있지만, UserDao 클래스와 같은 클래스패스에 존재하는 파일로 제한된다는 점이다.   
+예를 들어
+* 클래스패스 루트 등에 있는 XML 파일을 읽으려면 어떻게 해야할까?
+* 상대적인 클래스패스가 아니라 서버나 개발 시스템의 특정 폴더에 있는 파일을 읽을 수는 없을까?
+* 서블릿 컨텍스트의 상대적인 폴더나 http, ftp 프로토콜로 접근할 수 있는 웹상의 리소스 파일을 가져올 수는 없을까?
+* ➡️ **안타깝게도 자바에는 이렇게 다양한 위치에 존재하는 리소스에 대해 단일화된 접근 인터페이스를 제공해주는 클래스가 없다.**
 </br>
 
 ## 🌱7.4 인터페이스 상속을 통한 안전한 기능확장
